随机抽取修改

--- a/OEBPS/Text/c017.xhtml
+++ b/OEBPS/Text/c017.xhtml
@@ -36,11 +36,11 @@
     <p>可是虽然有声音却哪里都看不到重要的声音的主人。</p>
     <p></p>
     <p>“<span class="character">你呢？”</span></p>
-    <p>“<span class="character">我是制造编号12，识别码‘ツヴェルフ’。</span></p>
+    <p>“<span class="character">我是制造编号12，识别码‘茨瓦尔夫’。</span></p>
     <p><span class="comment translator">ツヴェルフ 德语(zwölf) 12</span></p>
     <p><span class="character">你们现在所在的这个迷宫本身</span>”</p>
     <p></p>
-    <p>听到自称是ツヴェルフ的声音的自我介绍，梅赛德斯不禁为之动摇。</p>
+    <p>听到自称是茨瓦尔夫的声音的自我介绍，梅赛德斯不禁为之动摇。</p>
     <p>虽然没有将此表现出来，但因为无法掩饰惊愕而露出若干表情，自己也意识到自己已经抽筋了，自戒自己也还差得很远。</p>
     <p>在那样的她面前出现了一位女性，行了一个礼。</p>
     <p>这是一头黑发身着白衣的女性，脸上戴着眼镜。</p>
@@ -81,7 +81,7 @@
     <p>“<span class="character">首先请收下万能钥匙。</span></p>
     <p><span class="character">万能钥匙是绝对不会损坏的金属制成，也有自我修复功能，所以通常的手段是不会损坏的。</span></p>
     <p><span class="character">在众神的战斗中被使用，有记录是甚至能承受可以消灭一个国家的‘神之火’的威力，。”</span></p>
-    <p>ツヴェルフ这样说明的同时，在梅赛德斯面前出现了一块宝石。</p>
+    <p>茨瓦尔夫这样说明的同时，在梅赛德斯面前出现了一块宝石。</p>
     <p>用颤抖的指尖触摸那个的话，宝石很淡地闪耀。</p>
     <p></p>
     <p>“<span class="character">被认证为主人。接下来请确定待机模式和密钥模式的形状”</span></p>
@@ -89,7 +89,7 @@
     <p>“<span class="character">万能钥匙有便于携带的待机模式，和作为钥匙使用的两种钥匙模式。钥匙模式也可以作为武器使用，推荐使用剑等形状”</span></p>
     <p>“<span class="character">锁的时候也不能变小吗？”</span></p>
     <p>“<span class="character">在技术问题上，无论如何在发挥关键作用的时候都会变成刀剑的大小。到极限小型化做着,不过，这个以上好象不可能。对不起</span>”</p>
-    <p>梅赛德斯点头理解zwölf的说明。</p>
+    <p>梅赛德斯点头理解茨瓦尔夫的说明。</p>
     <p>虽然不知道原因，但是和待机模式不同，作为钥匙使用的时候需要很大。</p>
     <p>这恐怕是必要的作用差别吧。</p>
     <p>不是技术性地小型化不可能，钥匙的作用太大以小型不能做那个。</p>
@@ -160,7 +160,7 @@
     <p>先不管选择哪一扇门，像自己这样的小姑娘也能走到门前。</p>
     <p>那么，再多走到门前，不是也不奇怪吗？</p>
     <p>岂止如此，越过黑之门得到迷宫的人更多地在也好。</p>
-    <p>但是，对于这个问题，ツヴェルフ的声音多少有些惊讶。</p>
+    <p>但是，对于这个问题，茨瓦尔夫的声音多少有些惊讶。</p>
     <p>“<span class="character">BOSS好像对自己评价很低。</span></p>
     <p><span class="character">我想，身边没有比较的对象吧？”</span></p>
     <p>“<span class="character">嘛，除了我之外的吸血鬼战斗的样子在附近没见过呢。”</span></p>
