--- a/OEBPS/Text/c018.xhtml
+++ b/OEBPS/Text/c018.xhtml
@@ -33,7 +33,7 @@
     <p>穿着舒适，而且防刃，防弹，耐热性能出色，冲击也有一定程度的耐性。</p>
     <p>更加不容易破，因为尺寸根据穿着者变化永远能穿。</p>
     <p>作为防具的性能和以前的衣服是天壤之别。</p>
-    <p>zwölf说，这是众神的技术的产物。</p>
+    <p>茨瓦尔夫说，这是众神的技术的产物。</p>
     <p>迷宫钥匙作为装饰品加工为胸针。在明星胸针中央嵌入宝石固定，再用胸针用锁链系住腰带防止盗窃。</p>
     <p>当然不会做炫耀的事，在那种状态下平时会放在口袋里。</p>
     <p>更进一步调查了宝物库的结果，梅赛德斯关注了在那里的魔石。</p>
