--- a/OEBPS/Text/c020.xhtml
+++ b/OEBPS/Text/c020.xhtml
@@ -83,13 +83,13 @@
     <p>“解冻”的咒语可以使魔物出场，梅赛德斯也可以用。</p>
     <p>在“压缩”迷宫时，钥匙持有者可以将自己选择的东西作为压缩对象外。</p>
     <p>相反，“解冻”的时候也选择一部分……根据场合的不同，把想拿出来的东西以外的迷宫的全部作为解冻的对象以外的事选出了的魔物一体解冻叫出的技能也不是不可能。</p>
-    <p><span class="character">（ツヴェルフ，那家伙有迷宫吗？）</span></p>
+    <p><span class="character">（茨瓦尔夫，那家伙有迷宫吗？）</span></p>
     <p><span class="character">“不，主人。那是利用迷宫技术制造的一次性物品。名字叫做封石，和保存玛娜的魔石相反，可以封住物质随身携带”</span></p>
     <p>（我没见过那种东西。）</p>
     <p><span class="character">“是的。那是只有迷宫才能生产的项目。当然BOSS也可以做那个”</span></p>
     <p>（也就是说只有迷宫攻略者才能造出来的道具……？）</p>
     <p><span class="character">“是的。但是从状况来看，波里斯自身作为攻略者的可能性极低。如果他自己有迷宫的话，大概会做出大量的魔物吧”</span></p>
-    <p>梅赛德斯知道了，与zwölf小声对话，波里斯使用过的石头是攻略者由来的东西。</p>
+    <p>梅赛德斯知道了，与茨瓦尔夫小声对话，波里斯使用过的石头是攻略者由来的东西。</p>
     <p>但是，波里斯自身攻占迷宫制造出来的可能性极低，齐维尔说。</p>
     <p>那么考虑的可能性不多。</p>
     <p>玻利斯抓住了偶然被其他攻略者流放到市场的封石了吗？</p>
@@ -103,7 +103,7 @@
     <p>头部长着角，背上长着像蝙蝠一样的翅膀。</p>
     <p>形容为恶魔是最合适的姿态。</p>
     <p><span class="character">《贝赛德兽。是被配置在迷宫的最下层的事多的魔物。那个战斗力是能和阿修拉奥加一起战斗的水平”</span></p>
-    <p>梅赛德斯一边听着zwölf的说明，一边注意着自己的母亲和玛吉特，还有莫尼卡。</p>
+    <p>梅赛德斯一边听着茨瓦尔夫的说明，一边注意着自己的母亲和玛吉特，还有莫尼卡。</p>
     <p>贵族们虽然兴致勃勃，但毕竟强大是与名誉直接相关的吸血鬼。混乱地跑向出口的愚蠢行为谁也没有做。</p>
     <p>对突然的魔物的出现一边吵闹，残留冷静努力着状况的把握。</p>
     <p></p>
