--- a/OEBPS/Text/c030.xhtml
+++ b/OEBPS/Text/c030.xhtml
@@ -44,7 +44,7 @@
     <p>不然的话，这样的地方怎么会有阿修塔尔呢！”</p>
     <p>据说魔物的名字叫阿修塔尔。</p>
     <p>虽然不知道语源，但听起来却很强烈。</p>
-    <p>梅赛德斯一边仰望着阿修塔尔，一边小声地呼唤着zwölf。</p>
+    <p>梅赛德斯一边仰望着阿修塔尔，一边小声地呼唤着茨瓦尔夫。</p>
     <p>（图瓦尔夫，信息）</p>
     <p>《<span class="character">YES，主人。查找当地识别名“阿修塔尔”的信息。</span></p>
     <p><span class="character">……hit。搜索已完成。接下来公开信息。</span></p>
