--- a/OEBPS/Text/c031.xhtml
+++ b/OEBPS/Text/c031.xhtml
@@ -95,7 +95,7 @@
     <p>“<span class="character">不要担心，梅赛德斯。这是绝对不可能的・・・</span>”</p>
     <p>梅赛德斯对父亲的话感到不协调。</p>
     <p>普拉克迷宫是比梅赛德斯攻略的斯塔克迷宫难度更低的迷宫。</p>
-    <p>那么被攻略了的可能性比起sutarkudanjon不如高。</p>
+    <p>那么被攻略了的可能性比起sutarku迷宫不如高。</p>
     <p>但是，我不能断言没有被攻略的理由。</p>
     <p>难道是让饲养小狗的士兵在里面待机，杀死了通关的seeker吗？</p>
     <p>如果是这个父亲，为了支撑城市的经济，似乎能做到那种程度。</p>
