--- a/OEBPS/Text/c032.xhtml
+++ b/OEBPS/Text/c032.xhtml
@@ -51,7 +51,7 @@
     <p>如果处理主钥匙的梅赛德斯本人没有解冻迷宫就进去了，当然会被外面放置主钥匙。</p>
     <p>这个时候，主人钥匙作为防盗的自我防卫机能把洞内的岩石等拿出来，由于那个内侧填埋自己从外边变得看不见。</p>
     <p>简单来说，就是以变成状态来隐瞒自己。</p>
-    <p>梅赛德斯在迷宫内增设的一间房子里聚集了主要成员，向zwölf寻求说明。</p>
+    <p>梅赛德斯在迷宫内增设的一间房子里聚集了主要成员，向茨瓦尔夫寻求说明。</p>
     <p>现在在这里的除了梅赛德斯、茨瓦尔夫以外还有本凯、小黑。</p>
     <p>迷失方向，继续迷失方向的舒夫，与前几天捕获的阿修塔尔的4人和1只一只。</p>
     <p>也许阿修塔尔也应该给它取个名字。</p>
@@ -80,7 +80,7 @@
     <p>“<span class="character">另外，迷宫的增建和改装也是只有攻略者本人才被允许的权利。</span>”</p>
     <p>“<span class="character">原来如此，有很大的差别啊。</span>”</p>
     <p>“<span class="character">好的。然后像我这样跟随迷宫本身，这样说话也只有攻略者本人</span>”</p>
-    <p>zwölf是知道这个迷宫的全部的头脑。</p>
+    <p>茨瓦尔夫是知道这个迷宫的全部的头脑。</p>
     <p>如果在此之前受到限制的话，即使有隐藏的功能，子孙也无法知道这一点。</p>
     <p>实际上除了攻略者本人以外可以说是严格的系统。</p>
     <p>《最后是守护者的使役。攻略者可以召唤守护者来使役”</p>
