--- a/OEBPS/Text/c033.xhtml
+++ b/OEBPS/Text/c033.xhtml
@@ -63,7 +63,7 @@
     <p>正在说话的时候，泽维尔的话突然停了下来。</p>
     <p>而且梅赛德斯感到有些焦躁。</p>
     <p>为什么停止？现在讲的话，才是最重要的，关系到世界的根基的东西。</p>
-    <p>想快点说，但泽维尔夫什么也没说。</p>
+    <p>想快点说，但茨瓦尔夫什么也没说。</p>
     <p>“……怎么了？</p>
     <p>“……对不起。我被发言限制代码卡住了。</p>
     <p>要进行以上的说明，主人的权限还不够。</p>
