--- a/OEBPS/Text/c036.xhtml
+++ b/OEBPS/Text/c036.xhtml
@@ -120,7 +120,7 @@
     <p>那个徽章上画的剑，确实和那个第一王子拿着的剑一样。</p>
     <p>所以，我想那是万能钥匙吧……。</p>
     <p>“<span class="character">不，那不是万能钥匙。</span>”</p>
-    <p>被zwölf的一句话否定了。</p>
+    <p>被茨瓦尔夫的一句话否定了。</p>
 </body>
 
 </html>
