--- a/OEBPS/Text/c037.xhtml
+++ b/OEBPS/Text/c037.xhtml
@@ -14,13 +14,13 @@
     <h1>37. 追求</h1>
     <p>梅赛德斯认为。</p>
     <p>他断言巴尔多扎的剑是吉克哈特的王剑，而兹维尔夫不是万能钥匙。</p>
-    <p>王剑应该是万能钥匙，也就是说其中一个是错误的，在这种信息的精度上，现在没有人能战胜Zuverfu。</p>
+    <p>王剑应该是万能钥匙，也就是说其中一个是错误的，在这种信息的精度上，现在没有人能战胜茨瓦尔夫。</p>
     <p>也就是说那是模仿王剑的复制品，或者只是相似的另一把剑，梅赛德斯这样想着。</p>
     <p>实际上，主人钥匙和通常的武器光看不能判别。</p>
     <p>梅赛德斯自己也把万能钥匙做为与市贩的『哈尔巴德·乌尔扎特』同样，专业职务拿到手如果不确认区别也不可能。</p>
     <p>这样的话就足够了。没有真正的王剑，也会出现在这里。</p>
     <p>而且还方便。本来应该显示王剑力量的这个场合带来了假货的事自己已经，说着自己们不能使用也同样。</p>
-    <p>（ツヴェルフ。你们能分辨出万能钥匙和不是万能钥匙吗？）</p>
+    <p>（茨瓦尔夫。你们能分辨出万能钥匙和不是万能钥匙吗？）</p>
     <p>《YES，主人。但如果注视，附有所说的条件。</p>
     <p>一瞬间横穿了眼前的程度恐怕不会注意到”</p>
     <p>杜威尔夫能分辨主人钥匙是很大的优点。</p>
