--- a/OEBPS/Text/c055.xhtml
+++ b/OEBPS/Text/c055.xhtml
@@ -30,7 +30,7 @@
     <p>但是，总觉得这个世界上的名称是……至少生物的名字一旦决定下来，基本上就会被固定下来。</p>
     <p>椅子和桌子等根据各国名称也不同吧,不过，如果只限于魔物统一的可能性更高。</p>
     <p>回想起来，坏··果冻等明显是别的国家的语言。</p>
-    <p>在这种无关紧要的杂学和Zeverfu说话的时候，战斗已经开始了。</p>
+    <p>在这种无关紧要的杂学和茨瓦尔夫说话的时候，战斗已经开始了。</p>
     <p>果冻和小龙互相殴打，稍显劣势。</p>
     <p>小龙的物理攻击在流动体的果冻面前是没有意义的，但是火焰辐射是不同的。</p>
     <p>史莱姆系不耐火焰。幻想的常识。</p>
