--- a/OEBPS/Text/c081.xhtml
+++ b/OEBPS/Text/c081.xhtml
@@ -17,13 +17,13 @@
     <p>复制的魔物占植物系的大半,不过，很好地看的话恶魔系的魔物几体也能看见。</p>
     <p>恐怕这里是由植物系和恶魔系构成的迷宫吧。</p>
     <p>转了一会儿后，梅赛德斯抬起头一看，映出了男子等候的样子。</p>
-    <p>和zwölf一样身着白衣，戴着眼镜的男性。</p>
+    <p>和茨瓦尔夫一样身着白衣，戴着眼镜的男性。</p>
     <p>外表年龄大概三十多岁吧。虽然还保留着青春活力，但相反，头顶上的毛发却越来越稀薄，这引起了人们的悲哀。</p>
-    <p>恐怕和zuverufu一样，模仿着人类的谁的身姿被后世留下了这样的身姿的原创可悲。</p>
+    <p>恐怕和茨瓦尔夫一样，模仿着人类的谁的身姿被后世留下了这样的身姿的原创可悲。</p>
     <p>“<span class="character">你是这个迷宫的管理者吗？</span>”</p>
     <p>“<span class="character">就是那样。梅赛德斯先生。请叫我斯蒂芬</span>”</p>
-    <p>“知道了。对了，斯蒂芬，我有个问题。</p>
-    <p>我已经有一个迷宫了，这种情况下会怎么样呢？</p>
+    <p>“<span class="character">知道了。对了，斯蒂芬，我有个问题。</span></p>
+    <p><span class="character">我已经有一个迷宫了，这种情况下会怎么样呢？”</span></p>
     <p>迷宫因为得到的事被钥匙压缩，变得能随身携带。</p>
     <p>但是梅赛德斯已经有一个了。</p>
     <p>在这种情况下，新入手的迷宫是作为别的钥匙被交付，还是合并？</p>
@@ -50,8 +50,8 @@
     <p>只要有一个“护身符”就能让人安心。</p>
     <p>但是，在衣服下面很难出魔物，所以还是带上手腕上的护具比较好吧。</p>
     <p>“<span class="character">知道了。钥匙的形状怎么办？</span>”</p>
-    <p>“像腕带一样，缠在手腕上的形状很好。能做到吗？</p>
-    <p>《交给我吧》</p>
+    <p>“<span class="character">像腕带一样，缠在手腕上的形状很好。能做到吗？</span></p>
+    <p>《<span class="character">交给我吧</span>》</p>
     <p>梅赛德斯提出要求，迷宫瞬间被压缩。</p>
     <p>不久，按照梅赛德斯的要求形成了迷宫，缠住了她的手臂。</p>
     <p>（有点显眼。先把布缠在手腕上，再在上面缠上布藏起来）</p>
@@ -61,14 +61,14 @@
     <p>因为想研究贝亚特里克斯使用魔物作为武器这样的战斗也应该预先掌握魔物的种类吧。</p>
     <p>但是那些暂且是后退。</p>
     <p>比起那个，首先，有应该优先知道的事。</p>
-    <p>“<span class="character">ツヴェルフ</span>”</p>
-    <p>要是管理者哪边都好,不过，首先叫来了交往长的tsuverfu。</p>
+    <p>“<span class="character">茨瓦尔夫</span>”</p>
+    <p>要是管理者哪边都好,不过，首先叫来了交往长的茨瓦尔夫。</p>
     <p>于是，女白衣出现在眼前，行一礼。</p>
     <p>那个身姿变得比秃顶的ZIVEN更像了。</p>
     <p>话说ziven为什么选择了那样的姿态呢？</p>
-    <p>“这样我就成了两个迷宫的BOSS。</p>
-    <p>也就是说，以前所说的‘权限’也增加了，你应该也能说很多了吧？”</p>
-    <p>《YES，主人。但是在这里不能说话”</p>
+    <p>“<span class="character">这样我就成了两个迷宫的BOSS。</span></p>
+    <p><span class="character">也就是说，以前所说的‘权限’也增加了，你应该也能说很多了吧？</span>”</p>
+    <p>《<span class="character">YES，主人。但是在这里不能说话</span>》</p>
     <p>以前，梅赛德斯从茨维尔夫那里听说过构成这个世界的东西。</p>
     <p>在这个世界上，纳米机器存在于大气中，甚至连自己和魔物都能用纳米机器做出来。</p>
     <p>但是，在想问纳米机器是什么的时候，泽维尔的话被中断了。</p>
@@ -76,13 +76,13 @@
     <p>那么现在迷宫增多了，应该能听的内容也增加了。</p>
     <p>可是能听那个彻底只有主人。</p>
     <p>完全忘记了,不过，在压缩了迷宫的现在，这里也有贝阿朵克列斯。</p>
-    <p>“……压缩</p>
+    <p>“<span class="character">……压缩</span></p>
     <p>因此梅赛德斯解冻了迷宫，再次将自己放入其中。</p>
     <p>这样周围就没有耳朵了。</p>
     <p>茨瓦尔夫也静静地点头，摆出等待梅赛德斯提问的姿态。</p>
     <p>不管什么都要问啊，就是这么回事吧。</p>
-    <p>“首先是上次提问的继续。这个世界的魔物和生物都是用纳米机器做出来的。</p>
-    <p>那么纳米机器到底是什么呢？</p>
+    <p>“<span class="character">首先是上次提问的继续。这个世界的魔物和生物都是用纳米机器做出来的。</span></p>
+    <p><span class="character">那么纳米机器到底是什么呢？</span></p>
     <p>“<span class="character">纳米机器是众神制造出来的人工原子。所谓原子……</span>”</p>
     <p>“<span class="character">不解释原子也可以。所谓纳米机器，也就是说，虽然被命名为机器但不是机器……可以这样想吧？</span>”</p>
     <p>“<span class="character">就是那样。主人们肯定是有机生命体</span>”</p>
@@ -93,35 +93,35 @@
     <p>“<span class="character">众神为什么要把那种东西给……不，为什么用那样的东西造就了我们？</span>”</p>
     <p>“<span class="character">为了超越生物的极限</span>”</p>
     <p>“<span class="character">界限？</span>”</p>
-    <p>“曾经众神的世界是荣华至极的。</p>
-    <p>寿命延长，失去的四肢也再生，克服了以前被认为是不治之症……但是另一方面，神作为生物持续退化”</p>
+    <p>“<span class="character">曾经众神的世界是荣华至极的。</span></p>
+    <p><span class="character">寿命延长，失去的四肢也再生，克服了以前被认为是不治之症……但是另一方面，神作为生物持续退化</span>”</p>
     <p>茨维尔夫这样说，从他的表情中可以看到一丝忧愁。</p>
     <p>这也许就像梅赛德斯第一次见到她的感情一样。</p>
     <p>神……不知道人类是怎么样的。</p>
-    <p>但是，终于迎来了让Zeverfu如此表情的末路了吧。</p>
-    <p>“发达的科学剥夺了自己走路的必要性，失去了自己动手的意义。</p>
-    <p>一直追求便利的结果是神没有动自己的手脚，只是想想就觉得一切都足够了”</p>
+    <p>但是，终于迎来了让茨瓦尔夫如此表情的末路了吧。</p>
+    <p>“<span class="character">发达的科学剥夺了自己走路的必要性，失去了自己动手的意义。</span></p>
+    <p><span class="character">一直追求便利的结果是神没有动自己的手脚，只是想想就觉得一切都足够了</span>”</p>
     <p>“<span class="character">那是……是不是因为运动不足而死亡？</span>”</p>
     <p>“<span class="character">那个也是先进的科学解决了。上帝只能在生命维持装置中生存，在计算机完美的身体管理下才能生存下去。当时的平均寿命大概有500年左右吧</span>”</p>
     <p>“<span class="character">……真让人不寒而栗</span>”</p>
-    <p>“当然那样活着很无聊，所以神们除了自己身体以外，还想要自由活动的临时身体。在那里创造出只用脑电波链接使之移动的克隆，度过着简直象移动游戏的登场人物一样的人生。</p>
-    <p>生死自在……死也只有克隆一体死而已，自己甚至感觉不到疼痛。</p>
-    <p>大概是因为一直过着这样的生活吧……神在发觉的时候进化得太晚了”</p>
+    <p>“<span class="character">当然那样活着很无聊，所以神们除了自己身体以外，还想要自由活动的临时身体。在那里创造出只用脑电波链接使之移动的克隆，度过着简直象移动游戏的登场人物一样的人生。</span></p>
+    <p><span class="character">生死自在……死也只有克隆一体死而已，自己甚至感觉不到疼痛。</span></p>
+    <p><span class="character">大概是因为一直过着这样的生活吧……神在发觉的时候进化得太晚了</span>”</p>
     <p>过火的科学的末路。</p>
     <p>听到这话使梅赛德斯有些犹豫。</p>
     <p>即使这样，前世也是人类。虽然不是很喜欢这个世界，但即使如此，如果前方因为黑暗而封闭着的话，我也并不想知道。</p>
-    <p>但是必须知道。梅赛德斯下定决心，催促他先跟zwölf说话。</p>
+    <p>但是必须知道。梅赛德斯下定决心，催促他先跟茨瓦尔夫说话。</p>
     <p>“<span class="character">怎么了？</span>”</p>
-    <p>“只有持续使用的头部异常发达，不用的手脚退化收缩了。</p>
-    <p>眼睛、鼻子、嘴巴，不使用的部分全部恶化，失去了意义……其身姿是巨大的头部，BOSS们看到后就变成了魔物”</p>
+    <p>“<span class="character">只有持续使用的头部异常发达，不用的手脚退化收缩了。</span></p>
+    <p><span class="character">眼睛、鼻子、嘴巴，不使用的部分全部恶化，失去了意义……其身姿是巨大的头部，BOSS们看到后就变成了魔物</span>”</p>
     <p>“<span class="character">……那是生物吗？</span>”</p>
     <p>“<span class="character">……”不。那不是生物</span>”</p>
     <p>面对梅赛德斯的质问，茨维尔断言在微弱的沉默之后绝不是生物。</p>
     <p>她断言人工纳米机器构成的梅赛德斯等人是生物。</p>
     <p>人类是那么远离生物的吧……这样想着，梅赛德斯皱起了眉头。</p>
-    <p>《神啊……人类，如果没有自己创造出的文明的利器，就变成了连生存都做不到的不完全的存在。</p>
-    <p>为了延长寿命，甚至对遗传因子进行了加工，究竟是原因呢，还是应该成为呢……世界上最繁荣的生物，已经成为了世界上最弱小的生物以下的什么。</p>
-    <p>那就是你们创造者和被称为神者的原形”</p>
+    <p>《<span class="character">神啊……人类，如果没有自己创造出的文明的利器，就变成了连生存都做不到的不完全的存在。</span></p>
+    <p><span class="character">为了延长寿命，甚至对遗传因子进行了加工，究竟是原因呢，还是应该成为呢……世界上最繁荣的生物，已经成为了世界上最弱小的生物以下的什么。</span></p>
+    <p><span class="character">那就是你们创造者和被称为神者的原形</span>》</p>
 </body>
 
 </html>
