--- a/OEBPS/Text/c085.xhtml
+++ b/OEBPS/Text/c085.xhtml
@@ -56,7 +56,7 @@
     <p>被邀请到屋子里，梅赛德斯观察着士兵们。</p>
     <p>从士兵们那里完全感觉不到生气，一点动也不动。</p>
     <p>恐怕这也是某种魔物吧。</p>
-    <p>我这样想着就问了下zwölf，他马上回答了。</p>
+    <p>我这样想着就问了下茨瓦尔夫，他马上回答了。</p>
     <p>《制造编号799。正式名称P-001。当地识别名、游戏内裤。</p>
     <p>掌管的属性是“铁”单一。</p>
     <p>在裤衩种中最战力劣于其他的种子防御力优秀。</p>
