--- a/OEBPS/Text/c095.xhtml
+++ b/OEBPS/Text/c095.xhtml
@@ -30,8 +30,8 @@
     <p>或许是考虑过那种事情吧，现在已经心不在焉了。</p>
     <p>此外还有以琉迪亚为首的伯恩哈特的妻子们、孩子们……梅赛德斯、莫尼卡、玛吉特……并且菲利克斯和影子薄的上帝弗利特。</p>
     <p>全体人员到齐，注视着事的趋势。</p>
-    <p>“总觉得事情很复杂啊……。</p>
-    <p>但是，我同意了。瓦尔堡加拼命的态度是为了保护住所而拼命的呢”</p>
+    <p>“<span class="character">总觉得事情很复杂啊……。</span></p>
+    <p><span class="character">但是，我同意了。瓦尔堡加拼命的态度是为了保护住所而拼命的呢</span>”</p>
     <p>琉迪亚深切地说，把其他夫人也同情的眼光转向了瓦尔保加。</p>
     <p>现在对瓦尔堡加的印象完全反转，成为悲剧的女主人公。</p>
     <p>以前，她一直给人一种只会无视其他孩子的，对菲利克斯的继任者大声叫喊的女性的印象，其他夫人的印象最糟糕。</p>
@@ -50,23 +50,23 @@
     <p>那表情似乎有些不高兴，但声音中却渗透着些许的愉悦。</p>
     <p>虽然做了意料之外的事，但是很有趣……是的，他的表情在说。</p>
     <p>“<span class="character">在你看来，这是不正常的失误。做了相当不彻底的事情</span>”</p>
-    <p>“……我在反省。不应该活着，应该早点杀掉。</p>
-    <p>这是我的天真所导致的失败”</p>
+    <p>“<span class="character">……我在反省。不应该活着，应该早点杀掉。</span></p>
+    <p><span class="character">这是我的天真所导致的失败</span>”</p>
     <p>“<span class="character">ククク……你怎么可能有天真呢。是故意的……吧？</span>”</p>
     <p>伯恩哈特信以为真地说出的话语让梅赛德斯停下了脚步。</p>
-    <p>“抓住尤利亚这个女人，让他吐露情报的时候，你的选择有两个。</p>
-    <p>是杀是活……然后你选择了生存的方法。那是为什么？</p>
-    <p>已经泄露了信息，应该没有什么利用价值了”</p>
+    <p>“<span class="character">抓住尤利亚这个女人，让他吐露情报的时候，你的选择有两个。</span></p>
+    <p><span class="character">是杀是活……然后你选择了生存的方法。那是为什么？</span></p>
+    <p><span class="character">已经泄露了信息，应该没有什么利用价值了</span>”</p>
     <p>“<span class="character">我犹豫着要杀了。而且有汉娜阿姨这样的专业人士，我觉得应该交给那个判断</span>”</p>
-    <p>“是吗？对了，这次工作对你来说是很方便的。</p>
-    <p>瓦尔堡加的形象恢复了，普遍认为应该让菲利克斯成为后继者。</p>
-    <p>对于不想继承这个家的你来说，这不是很方便吗？”</p>
+    <p>“<span class="character">是吗？对了，这次工作对你来说是很方便的。</span></p>
+    <p><span class="character">瓦尔堡加的形象恢复了，普遍认为应该让菲利克斯成为后继者。</span></p>
+    <p><span class="character">对于不想继承这个家的你来说，这不是很方便吗？</span>”</p>
     <p>“<span class="character">……</span>”</p>
     <p>梅赛德斯转过身去。</p>
     <p>那是无礼的态度,不过，伯恩哈特没有介意的情况持续言词。</p>
-    <p>“而且，这样对方的动作也变得容易理解了。</p>
-    <p>既然知道了菲利克斯这个对抗马的存在，那些家伙就不能无视它吧。</p>
-    <p>也就是说，已经没有时间去在意你了……菲利克斯是个不错的防弹品”</p>
+    <p>“<span class="character">而且，这样对方的动作也变得容易理解了。</span></p>
+    <p><span class="character">既然知道了菲利克斯这个对抗马的存在，那些家伙就不能无视它吧。</span></p>
+    <p><span class="character">也就是说，已经没有时间去在意你了……菲利克斯是个不错的防弹品</span>”</p>
     <p>梅赛德斯半途而废地利用了尤利亚，导致了事态的恶化。</p>
     <p>半吊子的家伙最会使事态恶化……这也是梅赛德斯自己对二班同学的感想。</p>
     <p>但是先说结论，这次的失误全都利于梅赛德斯。</p>
@@ -76,8 +76,8 @@
     <p>伯恩哈特认为这些都符合梅赛德斯的计算。</p>
     <p>“<span class="character">就是这样的地方，梅赛德斯</span>”</p>
     <p>“<span class="character">……</span>”</p>
-    <p>“为了自己的利益，甚至连亲哥哥的生命都保不住。我买了那种冷酷。</p>
-    <p>我确信了……果然对你没有感情。无论到哪里都是自私的，歪曲。这才是我的孩子”</p>
+    <p>“<span class="character">为了自己的利益，甚至连亲哥哥的生命都保不住。我买了那种冷酷。</span></p>
+    <p><span class="character">我确信了……果然对你没有感情。无论到哪里都是自私的，歪曲。这才是我的孩子</span>”</p>
     <p>只说了想说的话，伯恩哈特兴高采烈地走了。</p>
     <p>梅赛德斯盯着她的背看了一会儿，但她也走了过去。</p>
     <p>她的侧脸，看上去好象没有心或者厌恶歪斜着。</p>
