--- a/OEBPS/Text/c096.xhtml
+++ b/OEBPS/Text/c096.xhtml
@@ -64,19 +64,19 @@
     <p>而且在Negurije下面什么都没穿，这里有男人的话确实成为了眼毒吧。</p>
     <p>再生能力和强度优秀的吸血鬼基本上不会下垂，因此很多女性讨厌睡觉时被束缚的感觉，什么都不能穿。</p>
     <p>这样看来，以前是男装的，真让人吃惊。</p>
-    <p>“我接下来要进入殿下的防守了。</p>
-    <p>其他暂且不谈，尤利亚来的话大概不是我或者梅尔的话不能防御。</p>
-    <p>如果梅尔去王都的话，应该会早点解决的……”</p>
-    <p>“……不，我也是留在这里比较好吧。</p>
-    <p>既然不明白敌人的目标，就应该把战斗力集中到最重要的吉克林德防御上”</p>
+    <p>“<span class="character">我接下来要进入殿下的防守了。</span></p>
+    <p><span class="character">其他暂且不谈，尤利亚来的话大概不是我或者梅尔的话不能防御。</span></p>
+    <p><span class="character">如果梅尔去王都的话，应该会早点解决的……</span>”</p>
+    <p>“<span class="character">……不，我也是留在这里比较好吧。</span></p>
+    <p><span class="character">既然不明白敌人的目标，就应该把战斗力集中到最重要的吉克林德防御上</span>”</p>
     <p>“<span class="character">嗯……也许确实是这样</span>”</p>
     <p>虽然王都现在非常混乱，但比起这个，一个人的吉林德更重要。</p>
     <p>因为那里也有骑士团，所以不管牺牲出来总会有办法的。</p>
     <p>所以梅赛德斯得出了结论，不应该从这里行动。</p>
     <p>但是对于那种冷淡的判断，吉林德显得很焦急。</p>
-    <p>“等一下。</p>
-    <p>作为我来说，比起我更希望保护民众……对了，马上准备吧！</p>
-    <p>即使多一个人也要守护的话”</p>
+    <p>“<span class="character">等一下。</span></p>
+    <p><span class="character">作为我来说，比起我更希望保护民众……对了，马上准备吧！</span></p>
+    <p><span class="character">即使多一个人也要守护的话</span>”</p>
     <p>“<span class="character">别这样。不要让野鸭背着葱出去</span>”</p>
     <p>吉克林登似乎是出于强烈的责任感，想亲自出面帮助人们，但并非出乎意料。</p>
     <p>她确实很有实力，但要说能左右很多人的话，又不是那样的事，完全是那些骑士数人份左右的实力。</p>
@@ -91,8 +91,8 @@
     <p>那是骑士和士兵的工作。</p>
     <p>吉林德的工作就是即使牺牲人民也要平安无事。</p>
     <p>“<span class="character">你觉得敌人的目标是什么？</span>”</p>
-    <p>“是诱发我们薄弱地保护吉克林德，还是专心致志地保护吉克林德，淡化了王都的防守……但是，感觉不到真心想要攻陷王都的意思啊。</p>
-    <p>不管怎么说，我们要继续保护吉克林德，观察他的样子”</p>
+    <p>“<span class="character">是诱发我们薄弱地保护吉克林德，还是专心致志地保护吉克林德，淡化了王都的防守……但是，感觉不到真心想要攻陷王都的意思啊。</span></p>
+    <p><span class="character">不管怎么说，我们要继续保护吉克林德，观察他的样子</span>”</p>
     <p>这次不敢做什么，看透情况。</p>
     <p>汉娜也同意了梅赛德斯的判断。</p>
     <p>我也没想过会抓住从这里出来指挥魔物的人，但恐怕那是徒劳的。</p>
