--- a/OEBPS/Text/c097.xhtml
+++ b/OEBPS/Text/c097.xhtml
@@ -41,13 +41,13 @@
     <p>汉娜和梅赛德斯现在回到宿舍自己的房间。</p>
     <p>基林德的周围隐藏着汉娜的部下和梅赛德斯发出的魔物。</p>
     <p>“<span class="character">散布谣言的人是？</span>”</p>
-    <p>“虽然抓到了几个部下，但是全部都没有关系。只是被钱收买了而已。</p>
-    <p>虽然拷问魔物也活捉了，但这边也没有情报。我无能为力”</p>
+    <p>“<span class="character">虽然抓到了几个部下，但是全部都没有关系。只是被钱收买了而已。</span></p>
+    <p><span class="character">虽然拷问魔物也活捉了，但这边也没有情报。我无能为力</span>”</p>
     <p>汉娜举起双手，几乎要举起手来。</p>
     <p>然后倒在床上，呜呜地叫着。</p>
     <p>“<span class="character">这是怎么回事啊。这样下去就不会叛乱了</span>”</p>
-    <p>“虽然是姑息，但手还不错。如果提高民众的差距，甚至引发叛乱，那才是他们的胜利。</p>
-    <p>即使后来真正的国王从蘑菇里出来，谁都不会认为那是敌人”</p>
+    <p>“<span class="character">虽然是姑息，但手还不错。如果提高民众的差距，甚至引发叛乱，那才是他们的胜利。</span></p>
+    <p><span class="character">即使后来真正的国王从蘑菇里出来，谁都不会认为那是敌人</span>”</p>
     <p>“<span class="character">准确地想也不说，是吧。既然发动了叛乱，就不能后退了</span>”</p>
     <p>现在，『王都突然能出魔物的只有公主』的传言蔓延提高着heito。</p>
     <p>但是，如果发生叛乱，前提条件也可以被破坏。</p>
@@ -59,9 +59,9 @@
     <p>他把矛指向公主，说：“对不起，我弄错了。“原谅我吧”……那种东西不通。首先要确定死罪。</p>
     <p>所以即使发现事实也无法挽回。</p>
     <p>只有吞下疑问装作没注意到，贯穿叛乱。</p>
-    <p>“虽然知道对方的目的……说明白也无可奈何，难受。</p>
-    <p>一次性兵无论多少都能出这么麻烦。这场游击战简直是无敌的。</p>
-    <p>喂，梅露，你有什么办法吗？请在无敌的迷宫里想办法啊”</p>
+    <p>“<span class="character">虽然知道对方的目的……说明白也无可奈何，难受。</span></p>
+    <p><span class="character">一次性兵无论多少都能出这么麻烦。这场游击战简直是无敌的。</span></p>
+    <p><span class="character">喂，梅露，你有什么办法吗？请在无敌的迷宫里想办法啊</span>”</p>
     <p>“<span class="character">总算……什。很遗憾，没有比这更方便的魔物了</span>”</p>
     <p>顺便一提，也许不用说，汉娜早就知道梅赛德斯是迷宫的所有者，梅赛德斯也没对汉娜特别隐瞒。</p>
     <p>到现在为止好几次在汉娜面前拿出魔物，汉娜也明白平时沉默着。</p>
@@ -72,19 +72,19 @@
     <p>但是，被只有梅赛德斯才能听到的声音从迷宫内传来了建议。</p>
     <p>这么说来，梅赛德斯想起来，如果把迷宫当作自己的话，一定有比自己更习惯的家伙吧，然后把他叫到外面来。</p>
     <p>那是久违的出场的帝国女帝贝阿朵里克斯。</p>
-    <p>“恩，好久没在外面的空气很好吃！并且隔了好久看的主殿仍旧可爱。</p>
-    <p>汉娜也丝毫没有改变，这比什么都好”</p>
+    <p>“<span class="character">恩，好久没在外面的空气很好吃！并且隔了好久看的主殿仍旧可爱。</span></p>
+    <p><span class="character">汉娜也丝毫没有改变，这比什么都好</span>”</p>
     <p>贝阿朵里克斯转到梅赛德斯身后，紧紧地抱着她，把胸放在了头上。</p>
     <p>不要紧。</p>
-    <p>“梅尔……你为什么现在把它拿出来了？</p>
-    <p>“这家伙好像有什么主意。不管怎么说，迷宫的处理比我强，这样的战斗也很强吧。</p>
-    <p>那么，有什么事的话，快告诉我。不然就回迷宫了”</p>
+    <p>“<span class="character">梅尔……你为什么现在把它拿出来了？</span></p>
+    <p>“<span class="character">这家伙好像有什么主意。不管怎么说，迷宫的处理比我强，这样的战斗也很强吧。</span></p>
+    <p><span class="character">那么，有什么事的话，快告诉我。不然就回迷宫了</span>”</p>
     <p>一边回答汉娜的问题，一边抓住贝阿列克斯的脸剥下。</p>
     <p>她看起来有些不满，但打开扇子，一脸得意地开始说明。</p>
-    <p>“真没趣……但是那个好。</p>
-    <p>那么，手并不是那么难的东西。</p>
-    <p>以眼还眼。什么姑息的手段不是敌人的专利权。</p>
-    <p>卑劣更卑劣的手，姑息更姑息的手。而且如果对方散布情报的话，我们也做那个就可以了”</p>
+    <p>“<span class="character">真没趣……但是那个好。</span></p>
+    <p><span class="character">那么，手并不是那么难的东西。</span></p>
+    <p><span class="character">以眼还眼。什么姑息的手段不是敌人的专利权。</span></p>
+    <p><span class="character">卑劣更卑劣的手，姑息更姑息的手。而且如果对方散布情报的话，我们也做那个就可以了</span>”</p>
     <p>贝阿朵里克斯是曾经从背后转动手打算将奥克斯变成自己的女人。</p>
     <p>因此这种卑怯上等的战斗很强。</p>
     <p>以前最后，因为梅赛德斯这个特大的正规人物计划失败了,不过，此次那个梅赛德斯在这里。</p>
@@ -107,15 +107,15 @@
     <p>罗勒化装，为了加速谣言而外出。</p>
     <p>从这里开始是持久战。在民众发动叛乱之前要坚持几天。</p>
     <p>……他这么想的耳朵里，传来了难以置信的言语。</p>
-    <p>“我们是真正的王，支持马克斯·战斗大人的一派！</p>
-    <p>昨天的袭击是我们王派遣的先遣队！”</p>
+    <p>“<span class="character">我们是真正的王，支持马克斯·战斗大人的一派！</span></p>
+    <p><span class="character">昨天的袭击是我们王派遣的先遣队！</span>”</p>
     <p>！？</p>
     <p>罗勒不由自主地回头望着听见声音的方向。</p>
     <p>咦，你在说什么？你在说什么？</p>
     <p>虽然不知道是哪里的笨蛋，但为什么要吐槽呢？</p>
     <p>在连杀意都渗透回头的前方他看到的，是自己们应该放出了的铠甲的魔物数尊，在城市的中央做着演讲这样的不可能的光景。</p>
-    <p>“我们真正的王者与公主所拥有的东西不同，拥有王剑！</p>
-    <p>也就是说，无论何时何地，都能召唤出魔物的军队！”</p>
+    <p>“<span class="character">我们真正的王者与公主所拥有的东西不同，拥有王剑！</span></p>
+    <p><span class="character">也就是说，无论何时何地，都能召唤出魔物的军队！</span>”</p>
     <p>“<span class="character">这次袭击，在诸位认识我们真正的王之前是不会停止的！</span>”</p>
     <p>“<span class="character">崇拜吧，称赞我吧！我们真正的王之名是马克斯·战斗！加油吧！</span>”</p>
     <p>“<span class="character">重复！朝廷派遣我们到这个王都，制裁愚蠢的百姓的伟大王的名字就是麦克斯·法特！</span>”</p>
