--- a/OEBPS/Text/c098.xhtml
+++ b/OEBPS/Text/c098.xhtml
@@ -22,7 +22,7 @@
     <p>不明白意思。明明魔物绝对不会背叛我们的……恐怕，尤利亚一定下达了命令。</p>
     <p>100%不会背叛的魔物做出了愚蠢的行动，命令它的人在我方内。</p>
     <p>因此尤利亚为了不再做多余的事而关在牢里，日后将处刑。</p>
-    <p>本人说“我是无辜的！”除了这家伙以外，没有其他傻瓜干了。</p>
+    <p>本人说“<span class="character">我是无辜的！</span>”除了这家伙以外，没有其他傻瓜干了。</p>
     <p></p>
     <p>因为尤利亚关闭了，再也没有被搅拌的畏惧了。</p>
     <p>但是已经晚了。到头了。已经结束了。</p>
@@ -78,16 +78,16 @@
     <p>一般来说，迷宫钥匙是看不出来的。</p>
     <p>譬如如果做着与市贩的装饰品同样的形式，那个是不是洞窟钥匙等看明白的东西。</p>
     <p>但是梅赛德斯能做那个。</p>
-    <p>如果是ツヴェルフ的话，注视一下就可以判断是不是迷宫钥匙了。</p>
+    <p>如果是茨瓦尔夫的话，注视一下就可以判断是不是迷宫钥匙了。</p>
     <p></p>
     <p>对梅赛德斯而言更是幸运，对罗勒而言不幸的是迷宫变成了两个，感知其他迷宫的能力有了一点点提高。</p>
     <p>这是理所当然的事情，比起一个人做，两个人分担的工作效率更高。</p>
-    <p>除了泽维尔夫，还有一个人……由于影子薄的管理者的zuiven加入的事精度上升着。</p>
+    <p>除了茨瓦尔夫，还有一个人……由于影子薄的管理者的zuiven加入的事精度上升着。</p>
     <p>多亏了那件事，梅赛德斯才从管理者的导航和建筑物的损坏情况等好不容易走到一间小屋。</p>
     <p></p>
     <p>说点题外话，虽说是导航，其实也没那么准确。</p>
     <p>“总觉得，感觉好像是在那边”的轻飘飘的无法依靠的导航，在来到这里之前已经陷入了调查好几次完全无关的建筑物的困境。</p>
-    <p>跟随zwölf的引导，结果在公共浴场的那些混蛋们裸露的困境下真的想把它扔掉。</p>
+    <p>跟随茨瓦尔夫的引导，结果在公共浴场的那些混蛋们裸露的困境下真的想把它扔掉。</p>
     <p>说到底他们的导航就是指全身青紧身衣的少年机器人在玩滑雪板的时候在周围飞来飞去《滑动滑行！》和在偏离的定时发出指示的导航器没有作用。</p>
     <p>可是不擅长的子弹也数击中了。</p>
     <p>几次徒劳的末了，梅赛德斯想办法到达正确的解答，与汉娜一起拿着迷宫钥匙。</p>
@@ -96,7 +96,7 @@
     <p>“<span class="character">啊，没错……</span>”</p>
     <p></p>
     <p>汉娜的问题中，梅赛德斯回答得有些靠不住。</p>
-    <p>虽然提到zuverfu是这个，但是看上去只是一种装饰品。</p>
+    <p>虽然提到茨瓦尔夫是这个，但是看上去只是一种装饰品。</p>
     <p>设计上就像是连着锁链的小剑，让人联想到前世在特产柜台排列着的龙之剑的钥匙圈。</p>
     <p></p>
     <p>“<span class="character">但是，没有任何反应？</span>”</p>
