--- a/OEBPS/Text/c100.xhtml
+++ b/OEBPS/Text/c100.xhtml
@@ -17,8 +17,8 @@
     <p>然后砍伐了哈尔巴德，瞬间巴吉鲁展开的火焰的墙壁被削减，只留下了一点斩。</p>
     <p>但是热铁从罗勒的侧腹掠过，他的嘴里发出了悲鸣。</p>
     <p>梅赛德斯在火焰的墙壁上迂回行驶，再次与罗勒拉近距离。</p>
-    <p>“喂，喂！？你没听见我的话吗！？</p>
-    <p>这里有人质……”</p>
+    <p>“<span class="character">喂，喂！？你没听见我的话吗！？</span></p>
+    <p><span class="character">这里有人质……</span>”</p>
     <p>“<span class="character">这样啊</span>”</p>
     <p>梅赛德斯认为，以人质和武力为盾牌的谈判，不应该单方面地接受对方的要求。</p>
     <p>所谓交易，既得益于双方，又得找出妥协点。</p>
@@ -41,8 +41,8 @@
     <p>恐怕是预先给予魔物们了『遵从巴西的命令』的命令吧,不过，尽管如此优先度还是马克斯强。</p>
     <p>因此，如果马克斯发出了停止命令，就不能推翻罗勒。</p>
     <p>“<span class="character">马克思大人……什么……！？</span>”</p>
-    <p>“罗勒哟……我们不是为了人民而战斗的吗？</p>
-    <p>为什么要做这么过分的事……这样的话，我们不是坏人吗！”</p>
+    <p>“<span class="character">罗勒哟……我们不是为了人民而战斗的吗？</span></p>
+    <p><span class="character">为什么要做这么过分的事……这样的话，我们不是坏人吗！</span>”</p>
     <p>马克斯虽然年幼，但开始意识到有些奇怪了吧。</p>
     <p>但与此同时，罗勒仍然没有放弃自己想要相信的心情。</p>
     <p>梅赛德斯本想这是个不察言观色地收留二人的绝好机会，但是汉娜抓住了他的手腕。</p>
@@ -52,8 +52,8 @@
     <p>如果是后者的话，人质就会死。汉娜很担心那个。</p>
     <p>作为回避的方法，梅赛德斯会把自己的迷宫引入魔物……我不想在这么多人面前干那个。</p>
     <p>“<span class="character">那么，所以……这是为了大义！为了伟大的目的，有些牺牲是不得已的！现在首先，我们必须摆脱这场危机！</span>”</p>
-    <p>“不是！我们不能为了自己的理由而有些牺牲！</p>
-    <p>巴吉尔，你搞错了！”</p>
+    <p>“<span class="character">不是！我们不能为了自己的理由而有些牺牲！</span></p>
+    <p><span class="character">巴吉尔，你搞错了！</span>”</p>
     <p>来到这里和关系不和……到底是利用者和被利用者这样的事吗？</p>
     <p>但是，如果说方便的话就好了。</p>
     <p>梅赛德斯和汉娜绕进取人质的魔物的背后，快速地收拾。</p>
@@ -63,8 +63,8 @@
     <p>罗勒咬了牙，然后看了梅赛德斯他们。</p>
     <p>不理解状况，不随心所欲行动的麦克斯放弃了吧。</p>
     <p>他用相反的声音，开始说些出乎意料的话。</p>
-    <p>“哦，我的马克斯！你骗了我！</p>
-    <p>袭击王都也好，人质作战也罢，都是你自己想出来的，你装作不知道的样子，把我当成恶徒，只做自己好人，还想得救吗！”</p>
+    <p>“<span class="character">哦，我的马克斯！你骗了我！</span></p>
+    <p><span class="character">袭击王都也好，人质作战也罢，都是你自己想出来的，你装作不知道的样子，把我当成恶徒，只做自己好人，还想得救吗！</span>”</p>
     <p>“<span class="character">什……你在说什么，罗勒……？</span>”</p>
     <p>看来罗勒已经改变了作战计划，将罪责推给了马克斯。</p>
     <p>虽然不是被这种萝卜演技所欺骗的梅赛德斯和汉娜……但是，讽刺的是，由于梅赛德斯对麦克斯的Heito集中活动，周围的人比较相信。</p>
@@ -72,9 +72,9 @@
     <p>这并不是无知的孩子就能解决的问题，吸血鬼的外表原本就不可靠。</p>
     <p>伪装成无知的孩子的大人的可能性也很大。</p>
     <p>……嗯，马克斯实际上只是个孩子。</p>
-    <p>“我们来做生意吧。把叛逆者麦克斯·伊特交给你们。</p>
-    <p>我一直被他骗……全是他的指示做的事。</p>
-    <p>无论如何，请原谅我……”</p>
+    <p>“<span class="character">我们来做生意吧。把叛逆者麦克斯·伊特交给你们。</span></p>
+    <p><span class="character">我一直被他骗……全是他的指示做的事。</span></p>
+    <p><span class="character">无论如何，请原谅我……</span>”</p>
     <p>人被逼得走投无路，出乎意料地变得不能冷静的思考。</p>
     <p>如果快要淹死的话，即使知道会沉没的稻草也要依靠。</p>
     <p>如果是平常的罗勒，就不会说这种傻话了，但可能还不习惯逆境吧。</p>
