--- a/OEBPS/Text/c101.xhtml
+++ b/OEBPS/Text/c101.xhtml
@@ -56,8 +56,8 @@
     <p>“嗯。但是精灵是世界上人数最多的人种，完全不知道是哪里的精灵。</p>
     <p>照现在这样下去，到底是他一个人的暴走呢，还是精灵方面的策略呢？</p>
     <p>“<span class="character">杀了的话不好吃吗？</span>”</p>
-    <p>“虽说是结果论，但也许是应该活捉来泄露情报的吧。</p>
-    <p>不过嘛，比起活着逃跑要好得多，那个场面连我也杀了”</p>
+    <p>“<span class="character">虽说是结果论，但也许是应该活捉来泄露情报的吧。</span></p>
+    <p><span class="character">不过嘛，比起活着逃跑要好得多，那个场面连我也杀了</span>”</p>
     <p>梅赛德斯轻而易举地收拾了罗勒，因为他认为即使从尸体中也能得到情报。</p>
     <p>但是如果是精灵的话，故事就完全不同了。</p>
     <p>尸体无口……那里的最好办法不是杀死罗勒，而是活捉之后拷问什么都做榨取信息的事。</p>
@@ -69,20 +69,20 @@
     <p>与此同时，在房间角落等待着的汉娜的部下们，开始聚集起瓦拉和罗勒的尸体。</p>
     <p>手中握着各种各样的器具，今后罗勒的遗体会怎么样呢……哎呀，不知道也没关系吧。</p>
     <p>有一点可以说的是，对付王家的人连死后的尊严都没有。</p>
-    <p>“虽然是猜测，但我觉得罗勒的目的大概是潜入这个国家的权力中枢。</p>
-    <p>如果是被有迷宫的人信赖的执事，就那样被重用，咨询角色那样的位置也能瞄准。</p>
-    <p>如果克里斯托夫成为国王，也许就能成为国王的助手。</p>
-    <p>所以我觉得他接近了当时攻略迷宫最接近的克里斯托夫”</p>
+    <p>“<span class="character">虽然是猜测，但我觉得罗勒的目的大概是潜入这个国家的权力中枢。</span></p>
+    <p><span class="character">如果是被有迷宫的人信赖的执事，就那样被重用，咨询角色那样的位置也能瞄准。</span></p>
+    <p><span class="character">如果克里斯托夫成为国王，也许就能成为国王的助手。</span></p>
+    <p><span class="character">所以我觉得他接近了当时攻略迷宫最接近的克里斯托夫</span>”</p>
     <p>“<span class="character">但是当时愚蠢的国王害怕自己的地位受到威胁而暗杀了克里斯托夫……原来如此</span>”</p>
     <p>“<span class="character">嗯。从这个意义上来说，虽然有点讽刺，但也不能说奥古斯特大人的糟糕表现就是保护了这个国家</span>”</p>
     <p>所谓事物，在结束之前，是不知道什么是正确的。</p>
     <p>只是一味的愚蠢的奥古斯特的行动这样守护着国家，实在让人心情复杂。</p>
     <p>梅赛德斯在走廊边走边问其他在意的事情。</p>
     <p>“<span class="character">马克斯战斗之后会怎样？</span>”</p>
-    <p>“虽然殿下强烈反对死罪，但也不能就此置之不理。</p>
-    <p>一般来说，也有剥夺身份被驱逐的，但是像迷宫一样的继承权被放逐之类的，根本不值一提。</p>
-    <p>连王族都说非王位继承者不可生小孩，更何况是叛逆者。</p>
-    <p>哎呀……虽然不是很舒服，但是很好一辈子都幽闭了吧……”</p>
+    <p>“<span class="character">虽然殿下强烈反对死罪，但也不能就此置之不理。</span></p>
+    <p><span class="character">一般来说，也有剥夺身份被驱逐的，但是像迷宫一样的继承权被放逐之类的，根本不值一提。</span></p>
+    <p><span class="character">连王族都说非王位继承者不可生小孩，更何况是叛逆者。</span></p>
+    <p><span class="character">哎呀……虽然不是很舒服，但是很好一辈子都幽闭了吧……</span>”</p>
     <p>马克斯的未来是黑暗的。</p>
     <p>是死是死，只能活两种选择。</p>
     <p>他自己并不是什么坏事。</p>
