--- a/OEBPS/Text/c103.xhtml
+++ b/OEBPS/Text/c103.xhtml
@@ -63,33 +63,33 @@
     <p>即使护卫齐备，也无法保证那两个人能活着回来。</p>
     <p>我觉得真是令人讨厌的困境。虽然想让王族通关，但是为了这个必须让王族暴露在危险之中。</p>
     <p>最主要的问题是，汉娜自己不能参加吉克林德的洞窟攻略吗？</p>
-    <p>“最好是让殿下通关……也许，包括我在内，迷宫里走完的精英一个人混在一起，就无法得到迷宫……是这样吧？</p>
+    <p>“<span class="character">最好是让殿下通关……也许，包括我在内，迷宫里走完的精英一个人混在一起，就无法得到迷宫……是这样吧？</span></p>
     <p>“<span class="character">……</span>”</p>
     <p>汉娜以前和自己信赖的部下几次一起到达了迷宫的最下层。</p>
     <p>但是无论做了多少次，汉娜面前都只出现了金门。</p>
     <p>在调查过程中，他们认为地下城所有者的证据是什么，但却没有任何线索……所以汉娜是这样想的。</p>
-    <p>“恐怕自己没有攻略的权利”。</p>
+    <p>“<span class="character">恐怕自己没有攻略的权利</span>”。</p>
     <p>梅赛德斯无言地回答那个问题。据说这个信息不能免费做。</p>
     <p>汉娜好像也预料到了，从胸前的口袋拿出徽章放在了梅赛德斯面前。</p>
     <p>“<span class="character">这次开张的王都地下拍卖招待券。据说在只有部分特权阶级能参加的地方，在这里以外不出现的非法东西也种种地被展出哟</span>”</p>
     <p>“<span class="character">这算是默契吗？</span>”</p>
-    <p>“算了。因为不管什么都取缔的话反而会破坏秩序，如果不给背后的社会居民一个住所的话就会暴露出来。</p>
-    <p>嘛，殿下在那一带，看起来无法割舍，所以不知道他的存在”</p>
+    <p>“<span class="character">算了。因为不管什么都取缔的话反而会破坏秩序，如果不给背后的社会居民一个住所的话就会暴露出来。</span></p>
+    <p><span class="character">嘛，殿下在那一带，看起来无法割舍，所以不知道他的存在</span>”</p>
     <p>汉娜无论从哪方面来说都是些有良知的人，但决不仅仅是善人。</p>
     <p>不愧是生活在黑社会里，能切断这种手段，也会染指脏手段。</p>
     <p>这次也是这样。为了从梅赛德斯那里买信息，暴露了背后的世界，甚至还给了那个招待券。</p>
     <p>不过，如果是梅赛德斯的话，在好好地分居的基础上只会捡到利益，正因为有这样一种不正常的信赖才做出的选择。</p>
     <p>梅赛德斯想了一下，不久就接受了那个徽章。</p>
-    <p>“汉娜的担心是正确的。在迷宫最深处，人们被迫选择能获得安全的荣耀，或是冒着危险挑战的考验，在这里获得安全的人不会再挑战考验，记忆也会被消除。</p>
-    <p>而且无论哪个迷宫都一样。所有的迷宫都失去了挑战考验的资格。</p>
-    <p>汉娜挑战的迷宫已经被谁的手攻略了的可能性也没有……”</p>
+    <p>“<span class="character">汉娜的担心是正确的。在迷宫最深处，人们被迫选择能获得安全的荣耀，或是冒着危险挑战的考验，在这里获得安全的人不会再挑战考验，记忆也会被消除。</span></p>
+    <p><span class="character">而且无论哪个迷宫都一样。所有的迷宫都失去了挑战考验的资格。</span></p>
+    <p><span class="character">汉娜挑战的迷宫已经被谁的手攻略了的可能性也没有……</span>”</p>
     <p>“<span class="character">没有啊。因为我进入了最深层的迷宫，是克里斯托夫攻略的迷宫</span>”</p>
     <p>又连接到那里吗？</p>
     <p>一边这样想着，梅赛德斯一边等待汉娜的故事的继续。</p>
-    <p>“准确地说，有两个呢。我是进入最深处的迷宫。</p>
-    <p>我进去过一次迷宫里面，从金门把财宝带回来了。</p>
-    <p>那个迷宫为什么消失了,不过，日后新的迷宫出来，跑破了那个。</p>
-    <p>但是那里和以前一样只有金门啊……总觉得有点奇怪啊”</p>
+    <p>“<span class="character">准确地说，有两个呢。我是进入最深处的迷宫。</span></p>
+    <p><span class="character">我进去过一次迷宫里面，从金门把财宝带回来了。</span></p>
+    <p><span class="character">那个迷宫为什么消失了,不过，日后新的迷宫出来，跑破了那个。</span></p>
+    <p><span class="character">但是那里和以前一样只有金门啊……总觉得有点奇怪啊</span>”</p>
     <p>看来汉娜以前已经潜入了迷宫的最下层。</p>
     <p>梅赛德斯一边想着真了不起，一边提出质问。</p>
     <p>“<span class="character">那里的财宝是？</span>”</p>
@@ -98,9 +98,9 @@
     <p>一回头连回头都不被承认的强制二选被强迫,不过，第二次已经没有选择那个选择的权利本身能返回吗？</p>
     <p>梅赛德斯一边这样想着，一边又反复提问。</p>
     <p>“<span class="character">克里斯托夫攻略的时候，不是因为任务而潜伏在别的国家吗？</span>”</p>
-    <p>“是啊。我没拿到迷宫，只把情报提供给国家，然后就去任务了。</p>
-    <p>在这期间，以我留下的信息为线索，克里斯托夫攻略了我。</p>
-    <p>好像是我以前带回来的财宝中带走了几件武器”</p>
+    <p>“<span class="character">是啊。我没拿到迷宫，只把情报提供给国家，然后就去任务了。</span></p>
+    <p><span class="character">在这期间，以我留下的信息为线索，由克里斯托夫攻略了。</span></p>
+    <p><span class="character">好像是我以前带回来的财宝中带走了几件武器</span>”</p>
     <p>原来如此，梅赛德斯理解了。</p>
     <p>试想一下的话，就算再有实力，也很容易被暗杀的男人，不可能在初次见面时就看透迷宫。</p>
     <p>谁有前任者，充分做着迷宫的调查，认为原来清除了那个信息自然。</p>
@@ -111,15 +111,14 @@
     <p>现在想来，副官尼级暗杀克里斯托夫的背景是“那是队长的功劳吧，**！”也许也有这样的愤怒。</p>
     <p>最终，汉娜的发言力和影响力也增强了捕获克里斯托夫的孙子马克斯的贡献。</p>
     <p>虽然不是故意做的，但从结果来看，汉娜是一个人获胜的火柴泵。</p>
-    <p>“总之……这样啊，果然我加入攻略成员的话攻略不可能啊……。</p>
-    <p>于是，那时带去的孩子们也全都不行呢……。</p>
-    <p>咦？这个，我家那有本事的孩子，谁也出不了啊。这个不是堵车吗？”</p>
+    <p>“<span class="character">总之……这样啊，果然我加入攻略成员的话攻略不可能啊……。</span></p>
+    <p><span class="character">于是，那时带去的孩子们也全都不行呢……。</span></p>
+    <p><span class="character">咦？这个，我家那有本事的孩子，谁也出不了啊。这个不是堵车吗？</span>”</p>
     <p>汉娜这样说着，用双手捂住了脸。</p>
-    
-    
+    <p class="divline"></p>
     <p>因为有点矛盾，所以修改了一部分。</p>
     <p>【克里斯托夫攻略为止的流程】</p>
-    <p>汉娜：“虽然来到了最下层，但是已经不行了！选择金门撤退！”</p>
+    <p>汉娜：“<span class="character">虽然来到了最下层，但是已经不行了！选择金门撤退！</span>”</p>
     <p>・汉娜，拿着地图和金钱之门所得到的财宝逃出迷宫的最下层。</p>
     <p>失去了关于考验的记忆，从一开始就只有金门的记忆。</p>
     <p>这个时候带去的有本领的部下全体人员也由于牵连进入不可攻略确定组。</p>
