--- a/OEBPS/Text/c104.xhtml
+++ b/OEBPS/Text/c104.xhtml
@@ -21,18 +21,20 @@
     <p>（只有吸血鬼啊……当然了。） 这个建筑物是精灵和吸血鬼共用的，但现在是深夜。 作为吸血鬼生活着的话快要忘记了,不过，所谓夜晚本来不是应该活动的时间带。 所以行会中只有吸血鬼，看不到精灵的身影。 反过来如果这个成为正午，这次吸血鬼的身姿消失成为只elfe吧。</p>
     <p>如果明早和傍晚的话，说不定哪一个种族也在。 仔细一看，接待处边站着一个精灵的男人，看起来很丢脸。 这个时间段从迷宫回来的精灵也不是没有来行会的可能性，为了那个时候被留下。 “那么……你适当地接受几个委托？” 首先，梅赛德斯前往论坛，浏览了张贴在那里的委托书。</p>
     <p>委托既有行会出示的东西，也有同样的seeker出示的情况。 想要收集到手很麻烦的魔物素材的时候，seeker-但是向其他的seeker提出请求也不是什么稀奇的事情。 那倒不错……梅赛德斯看到委托书中的一本后，发现了一件奇怪的事情。 文字和自己平时使用的不一样，是用精灵语写的。</p>
-    <p>【皮琼斯捕获请求】</p>
-    <p>委托人：卡尔</p>
-    <p>报酬金额：5000条规则</p>
-    <p>期限：一周以内</p>
-    <p>详情：希望能尽快抓住天空迷宫中出现的皮琼。</p>
+    <div class="missioncard">
+        <p class="missioncard mission-title">【皮琼斯捕获请求】</p>
+        <p>委托人：卡尔</p>
+        <p>报酬金额：5000条规则</p>
+        <p>期限：一周以内</p>
+        <p>详情：希望能尽快抓住天空迷宫中出现的皮琼。</p>
+    </div>
     <p>……天空迷宫是什么？</p>
     <p>完全不记得的名字，这个村落里的迷宫的名字应该是《古伦萨迷宫》。</p>
     <p>而且单价也不同。规则？这个世界的钱应该是Elka……。</p>
     <p>梅赛德斯向路过附近的行会职员打招呼。</p>
     <p>“<span class="character">这个委托书是精灵出的吗？</span>”</p>
-    <p>“是的。他们把格伦萨迷宫叫做天空迷宫。我不懂你的意思。</p>
-    <p>所谓皮琼，是大型的鸽子的魔物。首先发现的是精灵，所以就取了这个名字”</p>
+    <p>“<span class="character">是的。他们把格伦萨迷宫叫做天空迷宫。我不懂你的意思。</span></p>
+    <p><span class="character">所谓皮琼，是大型的鸽子的魔物。首先发现的是精灵，所以就取了这个名字</span>”</p>
     <p>原来如此，我想。</p>
     <p>应该需要学习精灵语。</p>
     <p>如果语言不同，除了人名等固有名词以外，几乎是不同的。</p>
@@ -66,8 +68,8 @@
     <p>但是，没想到B居然会这么吃惊。</p>
     <p>在梅赛德斯中，B等级只有“和以前的菲利克斯差不多”的强度，因为只有被本凯全灭的派对的印象，所以并不觉得很厉害。</p>
     <p>不，这么说来，尤利亚也是B级别吧。</p>
-    <p>“啊，不，失礼了。确认了委托的受理。</p>
-    <p>迷宫在出了这栋楼往南走一点的地方”</p>
+    <p>“<span class="character">啊，不，失礼了。确认了委托的受理。</span></p>
+    <p><span class="character">迷宫在出了这栋楼往南走一点的地方</span>”</p>
     <p>“<span class="character">在村落里吗？</span>”</p>
     <p>“<span class="character">是的。以前在迷宫附近建造了村落，后来被什么人清除了迷宫，不知道是谁攻略的，反省过来说要把迷宫包围起来建造村落</span>”</p>
     <p>“<span class="character">……是吗？</span>”</p>
@@ -81,7 +83,7 @@
     <p>（……必须事先想办法。祭祀起来太麻烦了。</p>
     <p>总之，先进入迷宫吧。</p>
     <p>没想反正一次能清除等，此次只是稍微转浅的层次。</p>
-    
+    <p class="divline"></p>
     <p>・一部分确实和我们的语言体形不同</p>
     <p>Q、倒不如说平时就说日语，京城小姐之类的才是这里的语言体形吧？</p>
     <p>A、因为作品的关系，虽然梅赛德斯他们用日语说了，但请大家认为实际上他们是在说异世界语。</p>
