--- a/OEBPS/Text/c106.xhtml
+++ b/OEBPS/Text/c106.xhtml
@@ -11,10 +11,12 @@
 </head>
 
 <body>
-    <h1>106. 扯后腿 “出来，皮可”</h1>
+    <h1>106. 扯后腿</h1>
+    <p>“<span class="character">出来，皮可</span>”</p>
     <p>如果决定了以上作为目标，此次使用的魔物当然是能飞翔天空的皮可。 乘上隔了好久的出场紧张的皮可，一口气上升了。 这个迷宫的构造是跳过浮游的立足点，如果能在空中飞的话就能直线向上飞。</p>
     <p>在这一层里除了梅赛德斯以外，没有看到乘坐着可以飞行的魔物的卡片，恐怕这些人早就已经向前迈进了吧。 在那里苦苦挣扎的人们可以说是起跑失败而落后的伙伴。 梅赛德斯不想进入被留下来的一侧，所以悠然地让高度上升。 于是，在高度达到一定程度的时候，注意到了什么正在接近。</p>
-    <p>飞来的企鹅发出了鸡一样的叫声，飞到了空中。 那是什么？ 这样想的话从Zuverfu说明进入。 “当地识别名毕琼。鸟形的魔物威胁度为D级。 属性是水属性,不过，从口吐火。 虽然外表是那样的，但是遗传基因是鸭子的伙伴。可是我相信皮琼本身就是乌鸦“</p>
+    <p>飞来的企鹅发出了鸡一样的叫声，飞到了空中。 那是什么？ 这样想的话从茨瓦尔夫说明进入。</p>
+    <p>“当地识别名毕琼。鸟形的魔物威胁度为D级。 属性是水属性,不过，从口吐火。 虽然外表是那样的，但是遗传基因是鸭子的伙伴。可是我相信皮琼本身就是乌鸦“</p>
     <p>真是厉害的魔物” 复制件轻易地避开只有突入的地方的魔物的突击，以踢一发无力化做了。 就那样抓住指甲，象确认怎样一样地看梅赛德斯。 “这家伙也接受了捕获的委托，要抓到他吗？” 总之，到底能达成委托就足够了。 把没有意识的皮琼斯收纳在迷宫里，梅赛德斯向更高处走去。</p>
     <p>于是脚下没有了立足点，那个被认为是终点的地方有门。 打开那个的话又，新的区域等候着。 虽然在天空上是一样的，但这次的立足点像平均台一样狭窄的道路一直延续着，seeker们一边取得平衡一边一点点前进着。</p>
     <p>但是，一条道路如果被其他寻呼车追赶的话可能会被推落，现在也有一个人的寻呼机掉落到地狱里。 “好棒~……啊！” 梅赛德斯默默地观察着落下的标语。 于是，seeker在落下10米左右的地方消失了。 恐怕已经回到了一层了吧。 这次好像不是一层楼下的空间大。</p>
@@ -71,11 +73,11 @@
     <p>全体人员想先去，因为讨厌被跑互相的干扰互相。</p>
     <p>拿着武器四处逃窜的人，最后打算夺取渔夫的利益而待在门前的人，积极地去夺取武具的人，暂且丢下其他的seeker来减少对手的人……虽然形形色色，但完全没有协调性。</p>
     <p>“<span class="character">怎么办呢，主人</span>”</p>
-    <p>“怎么也没有。就这样天亮了。</p>
-    <p>把碍事的家伙全都打掉先走吧”</p>
+    <p>“<span class="character">怎么也没有。就这样天亮了。</span></p>
+    <p><span class="character">把碍事的家伙全都打掉先走吧</span>”</p>
     <p>在这里小争执也得不到进展。</p>
     <p>那么，只有排除所有阻碍者突破。</p>
-    <p>梅赛德斯下定决心，开始在哈尔巴德击落其他seeker们。</p>
+    <p>梅赛德斯下定决心，开始用哈尔巴德击落其他seeker们。</p>
     
 </body>
 
