--- a/OEBPS/Text/c108.xhtml
+++ b/OEBPS/Text/c108.xhtml
@@ -32,17 +32,17 @@
     <p>捕获比琼的委托顺利完成，并收取了委托费。</p>
     <p>也就是说，梅赛德斯抓住的那个肯定是皮琼。</p>
     <p>但是，我觉得这和出发前收到的说明不一致。</p>
-    <p>“我接到这个委托的时候，听说皮琼是鸽子的魔物。</p>
-    <p>但是实际见面后发现企鹅……不，是鸭子？不管怎样，只有不是鸽子的事情是确实的。</p>
-    <p>这是怎么回事？</p>
+    <p>“<span class="character">我接到这个委托的时候，听说皮琼是鸽子的魔物。</span></p>
+    <p><span class="character">但是实际见面后发现企鹅……不，是鸭子？不管怎样，只有不是鸽子的事情是确实的。</span></p>
+    <p><span class="character">这是怎么回事？</span></p>
     <p>“<span class="character">不不，那也是鸽子的一种。确实和众所周知的鸽子有点不同</span>”</p>
     <p>面对职员的说明，梅赛德斯皱起了眉头。</p>
     <p>企鹅是一种鸽子？说实话我不知道意思。</p>
     <p>不，不明白意义的只有自己，在这个世界企鹅的名字是鸽子吗？</p>
-    <p>正想着这么想着，ツヴェルフ伸出了救生船。</p>
-    <p>《主人。在这个世界上，主人所知道的企鹅这种生物被分成了鸽子的一种。</p>
-    <p>在很长的时间里，信息像传言游戏一样扭曲，传达错了吧。</p>
-    <p>因为这个世界没有把姿态等作为画留下来的文化……”</p>
+    <p>正想着这么想着，茨瓦尔夫伸出了救生船。</p>
+    <p>《<span class="character">主人。在这个世界上，主人所知道的企鹅这种生物被分成了鸽子的一种。</span></p>
+    <p><span class="character">在很长的时间里，信息像传言游戏一样扭曲，传达错了吧。</span></p>
+    <p><span class="character">因为这个世界没有把姿态等作为画留下来的文化……</span>”</p>
     <p>“<span class="character">……还是不要再认真考虑这个魔物了</span>”</p>
     <p>梅赛德斯果然头痛起来了。</p>
     <p>外表是企鹅，哭声是鸡，在空中飞来喷火，但却是水属性。</p>
@@ -51,13 +51,13 @@
     <p>首先是觉得自己所持有的飞行怪物复制成功的瞬间。</p>
     <p>将疑惑的职员置之不理，走出行会，在村落里行走。</p>
     <p>于是听到了耳熟的大声。</p>
-    <p>“等一下！不是和约定不一样吗！</p>
-    <p>委托达成费应该是7000规则哟！”</p>
-    <p>“话虽这么说……这样的信息对攻略非常没有用哟。</p>
-    <p>把剑、盾、铠甲和小手收集起来，不让它拿到其他seeker，一边塞进门里？</p>
-    <p>很难拿到吧”</p>
+    <p>“<span class="character">等一下！不是和约定不一样吗！</span></p>
+    <p><span class="character">委托达成费应该是7000规则哟！</span>”</p>
+    <p>“<span class="character">话虽这么说……这样的信息对攻略非常没有用哟。</span></p>
+    <p><span class="character">把剑、盾、铠甲和小手收集起来，不让它拿到其他seeker，一边塞进门里？</span></p>
+    <p><span class="character">很难拿到吧</span>”</p>
     <p>“<span class="character">那应该是在那边想办法的事情吧！我找到了按照要求好好打开门的方法！</span>”</p>
-    <p>刚才“不通过行会而在个人之间进行委托交涉的傻瓜之类的，恐怕不在这个村落里吧”，看来必须尽早订正。</p>
+    <p>刚才“<span class="character">不通过行会而在个人之间进行委托交涉的傻瓜之类的，恐怕不在这个村落里吧</span>”，看来必须尽早订正。</p>
     <p>傻瓜哪里都有啊。</p>
     <p>从会话中推测，委托人单方面地好象违反了约定,不过，有关这个最好不夹行会。</p>
     <p>或者说，不通过工会的委托人并不是什么好东西，所以不理会才是正确的。</p>
@@ -69,8 +69,8 @@
     <p>虽然不太喜欢麻烦事，但也要看时间和场合。</p>
     <p>至少这个少女，找到了即使稍微麻烦也最好预先认识的程度的价值。</p>
     <p>“<span class="character">真是灾难啊</span>”</p>
-    <p>“<span class="character">恩？……啊！你刚才的奇比子！</span>”</p>
-    <p>不要说chibi子。</p>
+    <p>“<span class="character">恩？……啊！你刚才的矮个子！</span>”</p>
+    <p>不要说矮个子。</p>
     <p>虽然梅赛德斯心里这么想，但因为身体已经停止了成长，所以什么也说不出来。</p>
     <p>不老期因人而异，抱怨也是没办法的事，但至少希望他能再长大一点再停下来。</p>
     <p>“<span class="character">大体上说来，可不是外表上的年龄哦。</span>”</p>
@@ -85,10 +85,10 @@
     <p>不能说吸血鬼的奇妙的成长,不过，作为最初增长速度快的生物是理所当然的。</p>
     <p>什么都不做，一直是婴儿，一直是孩子，连生存下去都做不到吧。</p>
     <p>与吸血鬼相比，可以说是正经的成长。</p>
-    <p>“比起这件事，我更想因为你，我掉到一层楼上了！为什么要给我！？</p>
-    <p>你居然用语言巧妙地指使我自取灭亡！”</p>
-    <p>“没有，我本来没有这个打算……哎呀，一半是我的原因吗？</p>
-    <p>知道了，那么下次去迷宫的时候跟我来就行。我会从转播地点重新开始，如果做得好的话，说不定能带你一起去”</p>
+    <p>“<span class="character">比起这件事，我更想因为你，我掉到一层楼上了！为什么要给我！？</span></p>
+    <p><span class="character">你居然用语言巧妙地指使我自取灭亡！</span>”</p>
+    <p>“<span class="character">没有，我本来没有这个打算……哎呀，一半是我的原因吗？</span></p>
+    <p><span class="character">知道了，那么下次去迷宫的时候跟我来就行。我会从转播地点重新开始，如果做得好的话，说不定能带你一起去</span>”</p>
     <p>“<span class="character">诶？真的吗？干吧！你真是个好家伙！</span>”</p>
     <p>正在说话的梅赛德斯，开始担心精灵的少女会不会没事呢。</p>
     <p>不管好坏，都带着直率的想法直接用语言表达出来……。</p>
@@ -98,7 +98,7 @@
     <p>她不是傻瓜的孩子，与梅赛德斯无关。</p>
     <p>比起那个，特意接触的理由还有其他。</p>
     <p>“<span class="character">话说回来，所谓的机器，就只有背在背上的人吗？</span>”</p>
-    <p>“不，还有别的呢。什么？有兴趣吗？</p>
+    <p>“<span class="character">不，还有别的呢。怎么？有兴趣吗？</span></p>
     <p>“<span class="character">啊，相当不错啊。我觉得这是其他地方看不到的优秀技术</span>”</p>
     <p>“<span class="character">嘿，嘿……哼？嘛，不是很有眼光嘛？你明明是吸血鬼，是不是有点明白啊？</span>”</p>
     <p>莱斯利挽着胳膊用傲慢的语调讲话，恐怕到现在为止几乎没有被表扬过机器吧。</p>
