--- a/OEBPS/Text/c110.xhtml
+++ b/OEBPS/Text/c110.xhtml
@@ -29,8 +29,8 @@
     <p>即使有十个人，那十个人各自妨碍，绝不是多数人无势。</p>
     <p>但是如果贵族和王族带十个士兵来，就会被强行要求一对十。</p>
     <p>那样的话果然还是有点麻烦。</p>
-    <p>“那个……谢谢你带我来。</p>
-    <p>这样你就成了竞争对手了”</p>
+    <p>“<span class="character">那个……谢谢你带我来。</span></p>
+    <p><span class="character">这样你就成了竞争对手了</span>”</p>
     <p>“<span class="character">别这样</span>”</p>
     <p>莱斯利不知为什么用低沉的声音说。</p>
     <p>这样就实现了带他去转播地点的约定，梅赛德斯打算再次一个人从这里开始攻略。</p>
@@ -46,9 +46,9 @@
     <p>原来如此……也就是说，想一起去的应该是莱斯利吧。</p>
     <p>“<span class="character">……不过，任务很辛苦可能是事实吧</span>”</p>
     <p>“<span class="character">！</span>”</p>
-    <p>“如果你可以的话……一起来吗？</p>
-    <p>“嗯！……啊，不，是吗？那，既然都这么说了那就没办法了！</p>
-    <p>啊！一起去吧！没办法啊！</p>
+    <p>“<span class="character">如果你可以的话……一起来吗？</span></p>
+    <p>“<span class="character">嗯！……啊，不，是吗？那，既然都这么说了那就没办法了！</span></p>
+    <p><span class="character">啊！一起去吧！没办法啊！</span></p>
     <p>一瞬间，虽然坦率地回答，但马上开始修饰外表。</p>
     <p>在奇怪的地方自尊心高吗，不是彻底『自己想跟去』，好象要『被请求了没办法跟去』的形式。</p>
     <p>对梅赛德斯来说哪个都行。</p>
@@ -73,10 +73,10 @@
     <p>话虽如此，但只要带上能飞的魔物的话，这一带也只是能解除的问题。</p>
     <p>梅赛德斯发出了复制，莱斯利和上次一样用水喷射在空中飞行。</p>
     <p>这时，从前方飞过来的皮琼和不知道为什么飞着的小妖精一个接一个地涌了出来。</p>
-    <p>“本地标识名、果胶布丁。</p>
-    <p>战斗力与普通的蟑螂比较没有变化，但是拥有风的属性，可以用魔法在空中飞翔”</p>
+    <p>“<span class="character">本地标识名、果胶布丁。</span></p>
+    <p><span class="character">战斗力与普通的蟑螂比较没有变化，但是拥有风的属性，可以用魔法在空中飞翔</span>”</p>
     <p>“<span class="character">哥布林……真是意外的多才多艺啊</span>”</p>
-    <p>梅赛德斯对ツヴェルフ的解释感到佩服和惊讶，同时用哈尔巴德把空中飞翔的哥布林弄成了两半。</p>
+    <p>梅赛德斯对茨瓦尔夫的解释感到佩服和惊讶，同时用哈尔巴德把空中飞翔的哥布林弄成了两半。</p>
     <p>对比普通的哥布林尼特指挥官魔法使，此次对能在天空飞的哥布林而感到十分吃惊。</p>
     <p>说不定过几天，在水中生存的蟑螂和潜入地下的蟑螂也能遇见。</p>
     <p>“<span class="character">话说回来，莱斯利。你有什么攻击手段吗？</span>”</p>
@@ -106,8 +106,8 @@
     <p>但是，莱斯利们大概也知道这一点吧，脸上浮现出得胜的笑容，瞄准了空中飞翔的蟑螂。</p>
     <p>然后连续扣动扳机，击穿蟑螂的头和胸使之坠落。</p>
     <p>“<span class="character">连射……</span>”</p>
-    <p>“这种事，这支枪是特制的。</p>
-    <p>我改造后最多可以连射8发”</p>
+    <p>“<span class="character">这种事，这支枪是特制的。</span></p>
+    <p><span class="character">我改造后最多可以连射8发</span>”</p>
     <p>梅赛德斯再次佩服这位自满的莱斯利。</p>
     <p>原来如此。看来不用担心。</p>
     <p>只要有这么多武器，就算是迷宫也能够继续下去吧。</p>
