--- a/OEBPS/Text/c111.xhtml
+++ b/OEBPS/Text/c111.xhtml
@@ -35,7 +35,7 @@
     <p>知道迷宫是常识无法测量的乱七八糟的地方，也知道从外边看的大小和内部的宽度不一致的事。</p>
     <p>因为在手掌大小的迷宫钥匙里能包容广大的空间，关于宽度考虑的事说不定本身弄错了。</p>
     <p>但是迷宫的大小也是有限的。</p>
-    <p>譬如梅赛德斯有的sutarkudanjon乍一看宽广地想,不过，实际道路象迷路一样地复杂交错只是道路变得长，其实面积本身并不是那么宽广。</p>
+    <p>譬如梅赛德斯有的sutarku迷宫乍一看宽广地想,不过，实际道路象迷路一样地复杂交错只是道路变得长，其实面积本身并不是那么宽广。</p>
     <p>至少像这个迷宫一样，不拐弯只顾前进的话，一转眼就能到达尽头的面积。</p>
     <p>（恐怕是空间循环……去到一定的位置的话不是被飞到别的通道吗？</p>
     <p>也就是说，这个迷宫并不是笔直前进的，实际上……）</p>
@@ -55,8 +55,8 @@
     <p>动作-----9495;</p>
     <p>※尽头的墙壁就像电视画面一样，映照着下一条通道。</p>
     <p>这样的话，即使在有限的空间也可以进行“持续前进的强制横滚动”。</p>
-    <p>梅赛德思索到这个地步，向zwölf打了招呼。</p>
-    <p>（zwölf。从迷宫的扩展功能中给我查看陷阱的项目。</p>
+    <p>梅赛德思索到这个地步，向茨瓦尔夫打了招呼。</p>
+    <p>（茨瓦尔夫。从迷宫的扩展功能中给我查看陷阱的项目。</p>
     <p>《好的，主人》</p>
     <p>迷宫是重点……使用取用的马纳能量产怪物和扩大地图。</p>
     <p>并且面积的扩张由于使用1P增加1格的事能，1格的宽度是纵横1米。</p>
