--- a/OEBPS/Text/c112.xhtml
+++ b/OEBPS/Text/c112.xhtml
@@ -76,7 +76,7 @@
     <p>暂且算是安全的吧。</p>
     <p>然后向在起点处的莱斯利招手。</p>
     <p>“<span class="character">呐，原来如此，不要停下来去就行了。好</span>”</p>
-    <p>看着梅赛德斯的做法而学习的蕾丝也同样在过道上奔跑。</p>
+    <p>看着梅赛德斯的做法而学习的莱斯利也同样在过道上奔跑。</p>
     <p>从踩到陷阱发动为止的缓冲时间是一秒左右。</p>
     <p>只要有那些，孩子也能跑过去。</p>
     <p>莱斯利和皮琼穿过通道，然后站在梅赛德斯旁边，一脸得意的表情。</p>
@@ -110,7 +110,7 @@
     <p>莱斯利声像闹别扭似地叫着，但精灵也绝不亚于吸血鬼。</p>
     <p>实际上，这两个种族的力量关系是势均力敌的……岂止如此，反而是精灵赢了。</p>
     <p>这是因为精灵在魔法处理这一点上凌驾于吸血鬼之上。</p>
-    <p>但是，当他指出这件事时，蕾丝眼看着变暗了。</p>
+    <p>但是，当他指出这件事时，莱斯利眼看着变暗了。</p>
     <p>“<span class="character">没什么……就算没有魔法也有能做到的事……</span>”</p>
     <p>梅赛德斯看着这样嘟哝着，转移视线的莱斯利，不由得察觉到了情况。</p>
     <p>这么说来，从第一次见面开始，莱斯利自己就完全不使用魔法。</p>
