--- a/OEBPS/Text/c113.xhtml
+++ b/OEBPS/Text/c113.xhtml
@@ -94,7 +94,7 @@
     <p>精灵是美型的印象，好像是很久远的东西。</p>
     <p>“<span class="character">げ……格拉西安</span>”</p>
     <p>好像认识。</p>
-    <p>蕾丝利露出厌恶的样子皱着脸。</p>
+    <p>莱斯利露出厌恶的样子皱着脸。</p>
     <p>怎么看都不像是友好的关系。</p>
     <p>如果说第一声挑衅这样的事的辈还好吧。</p>
     <p>（莱斯利还是不会使用魔法）</p>
