--- a/OEBPS/Text/c117.xhtml
+++ b/OEBPS/Text/c117.xhtml
@@ -63,7 +63,7 @@
     <p>用自己的发明之力清理迷宫，把宝物带回家的话，应该谁都不能小看自己了。</p>
     <p>一定会得到认可……这样相信着，挑战了迷宫。</p>
     <p>迷宫攻略进行得比想象的还要顺利。</p>
-    <p>虽然莱斯利本身也有实力，但对她来说更幸运的是在地下城认识的吸血鬼奇比子seeker，梅赛德斯的存在。</p>
+    <p>虽然莱斯利本身也有实力，但对她来说更幸运的是在地下城认识的吸血鬼矮个子seeker，梅赛德斯的存在。</p>
     <p>看上去只有十岁到十二岁左右，但那也只有十六岁。</p>
     <p>我觉得吸血鬼真的是有着奇怪的成长。</p>
     <p>说点题外话，她认识的人中有超过百岁外表还是童女的叔母，还有和叔母同辈却有着相当于九十岁外表的爷爷。</p>
