--- a/OEBPS/Text/c070.xhtml
+++ b/OEBPS/Text/c070.xhtml
@@ -31,12 +31,13 @@
     <p>究其原因，虽说是结果论，但吉克林德是平安无事的。</p>
     <p>如果是这样的话，那虽然是冷淡的说法，但是抛弃汉娜和菲利克斯，回避战争的话牺牲就少了。</p>
     <p>所以军队不动。首先揭开幕布，然后送上抗议书 … … 从那里事态不发展吧。</p>
-    <p>因为，韩娜和菲利克斯肯定是重要人物，但是当被问到是否应该用战火包围国家来拯救国家时，并不是这样的。</p>
+    <p>因为，汉娜和菲利克斯肯定是重要人物，但是当被问到是否应该用战火包围国家来拯救国家时，并不是这样的。</p>
     <p>或者，如果伯恩哈特主张”因为是重要的后继者，所以要夺回’．的话，军队也许会行动。</p>
     <p>他的发言力在当今无王的奥尔克斯，胜过任何人。</p>
     <p>但是，伯恩哈特首先不会做那个。为什么这么说呢，因为他认为自己是接班人的不是菲利克斯，而是梅赛德斯，他确信如果是汉娜的话自己也会逃跑的。</p>
     <p>正因为如此，如果在这里有人不动的话，事态就不会好转吧。</p>
-    <p>”吉克林德”梅赛德斯向正在和骑士们谈论着该怎么办的吉克林德打招呼。</p>
+    <p>“<span class="character">吉克林德</span>”</p>
+    <p>梅赛德斯向正在和骑士们谈论着该怎么办的吉克林德打招呼。</p>
     <p>谁也不能动，也不能动。</p>
     <p>正因为如此，才觉得这里只能自己动了。</p>
     <p>“<span class="character">任命我为发出抗议信的使者。这样我就能在公主的名义下前往帝国了</span>”</p>
@@ -67,9 +68,9 @@
     <p>所以，那样． … 二敢往无利的方向前进。那是自己应该走的路。</p>
     <p>“<span class="character">但是，梅赛德斯 … … 那很危险</span>”</p>
     <p>“<span class="character">虽然危险，但既然谁都不动，我就只好动 T 。而且，这也算是seeker。对粗暴的事情已经相当习惯了</span>”</p>
-    <p>”那，那就和护卫一起．</p>
-    <p>”不要。一个人轻松就好”</p>
-    <p>”那么至少我．． … </p>
+    <p>“<span class="character">那，那就和护卫一起．</span>”</p>
+    <p>“<span class="character">不要。一个人轻松就好</span>”</p>
+    <p>“<span class="character">那么至少我．． … </span>”</p>
     <p>“<span class="character">不行．你去国家吧。</span>”</p>
     <p>虽说是危险的吉克林德，但是因为自己的原因而被捕的菲利克斯和汉娜的救助心情应该很强烈。</p>
     <p>也就是说，她绝对不会选择见死不救。</p>
@@ -82,8 +83,8 @@
     <p>所以，想立刻帮助汉娜他们的吉克林德没有迷惑的理由。</p>
     <p>至少，如果梅赛德斯是吉克林德的话，他会毫不犹豫地下达命令吧。</p>
     <p>可是在这种地方烦恼，说不定人这个东西。</p>
-    <p>“不用担心。一定会带着汉娜和菲利克斯回来。</p>
-    <p>你只要相信我，送我出去就行了”</p>
+    <p>“<span class="character">不用担心。一定会带着汉娜和菲利克斯回来。</span></p>
+    <p><span class="character">你只要相信我，送我出去就行了</span>”</p>
     <p>因此，为了促使吉克林德做出决断，他用让人感到自信的声音说道。</p>
     <p>相信我。</p>
     <p>我一定会取回两人，用强有力的话消除她的迷惑。</p>
@@ -92,8 +93,8 @@
     <p>“<span class="character">啊。交给我吧</span>”</p>
     <p>吉克林德正直的眼睛和梅赛德斯的玻璃球般的眼睛相对。</p>
     <p>不久，吉克林德就停下了，并向梅赛德斯发出了命令。</p>
-    <p>“知道了……我任命你为使者。</p>
-    <p>但是，绝对不要勉强自己”</p>
+    <p>“<span class="character">知道了……我任命你为使者。</span></p>
+    <p><span class="character">但是，绝对不要勉强自己</span>”</p>
     <p>这样的话作为国家的命令能行动。</p>
     <p>稍微远离学业是很痛苦的，但稍后再找回来的话总会有办法的。</p>
     <p>比起这个，获得公主吉克林德的信用在将来一定会有好处的工作，从现在开始预先看外国绝不是徒劳。</p>
