--- a/OEBPS/Text/c076.xhtml
+++ b/OEBPS/Text/c076.xhtml
@@ -108,7 +108,7 @@
     <p>他自己刚刚说赢不了。</p>
     <p>那么让她倒下是什么意思呢？</p>
     <p>梅赛德斯比贝尔特里克斯更早地提出了答案。</p>
-    <p>“<span class="character">ツヴェルフ</span>”</p>
+    <p>“<span class="character">茨瓦尔夫</span>”</p>
     <p>“<span class="character">是的，启动上位权限……在这里的魔物，注册到斯塔克迷宫</span>”</p>
     <p>“<span class="character">解冻……然后压缩！</span>”</p>
     <p>与梅赛德斯宣言同时发生的变化是戏剧性的。</p>
