--- a/OEBPS/Text/c082.xhtml
+++ b/OEBPS/Text/c082.xhtml
@@ -12,49 +12,49 @@
 
 <body>
     <h1>82. 进化的死胡同</h1>
-    <p>zwölf继续说。</p>
+    <p>茨瓦尔夫继续说。</p>
     <p>从她口中说出的是无限接近神的生物的末路。</p>
-    <p>“众神越是荣华，作为生物失去了什么。</p>
-    <p>制造可能生病的人工内脏器官，在出生的同时将体内的内脏器官全部换掉……经过几代人的反复，最终出现了一个没有体内主要内脏器官的畸形儿，但是随着科学的进步，这些畸形儿也得以生存并留下孩子，并与下一代相连。</p>
-    <p>于是，许多人反复地重复着，最后甚至失去了内脏器官，成了出生后不马上处理就会死掉的缺陷生物”</p>
+    <p>“<span class="character">众神越是荣华，作为生物失去了什么。</span></p>
+    <p><span class="character">制造可能生病的人工内脏器官，在出生的同时将体内的内脏器官全部换掉……经过几代人的反复，最终出现了一个没有体内主要内脏器官的畸形儿，但是随着科学的进步，这些畸形儿也得以生存并留下孩子，并与下一代相连。</span></p>
+    <p><span class="character">于是，许多人反复地重复着，最后甚至失去了内脏器官，成了出生后不马上处理就会死掉的缺陷生物</span>》</p>
     <p>“<span class="character">无法想象。不使用的东西就会恶化，就算是进化的道理，也并不是那么极端吧</span>”</p>
-    <p>“好的。自然不会那样。可是神们连遗传因子也象自己的情况一样地改变了。</p>
-    <p>这已经是一种无法正常进化的生物了”</p>
-    <p>一边听着话一边想，梅赛德斯，如果真是这样的话，那么萨维尔的这个样子是什么呢？</p>
+    <p>《<span class="character">好的。自然不会那样。可是神们连遗传因子也象自己的情况一样地改变了。</span></p>
+    <p><span class="character">这已经是一种无法正常进化的生物了</span>》</p>
+    <p>一边听着话一边想，梅赛德斯，如果真是这样的话，那么茨瓦尔夫的这个样子是什么呢？</p>
     <p>她说她模仿了神的样子……说不定，成为了茨瓦尔夫的模型的这个身姿由于克隆什么什么，实体是她说的『生物以下』的肉块吗？</p>
-    <p>“当然会变得脆弱，容易死。先天性地各种各样的障碍也患，因此再人工地交换那个部分，然后退化。这是重复的。</p>
-    <p>不久所有的一切……当视力和听力等五感都能用生命维持装置来维持时，神就不需要头脑以外的所有东西，不再是生物了”</p>
+    <p>“<span class="character">当然会变得脆弱，容易死。先天性地各种各样的障碍也患，因此再人工地交换那个部分，然后退化。这是重复的。</span></p>
+    <p><span class="character">不久所有的一切……当视力和听力等五感都能用生命维持装置来维持时，神就不需要头脑以外的所有东西，不再是生物了</span>”</p>
     <p>“<span class="character">难得这么辣啊？</span>”</p>
-    <p>“只是说了事实而已。如果从出生的瞬间就开始不使用机械的力量的话，就无法一分钟活下去……如果自力行走的话，无法承受重力，就会被自己的头部压碎而死。</p>
-    <p>那种东西不是生物。我还没有活着”</p>
+    <p>“<span class="character">只是说了事实而已。如果从出生的瞬间就开始不使用机械的力量的话，就无法一分钟活下去……如果自力行走的话，无法承受重力，就会被自己的头部压碎而死。</span></p>
+    <p><span class="character">那种东西不是生物。我还没有活着</span>”</p>
     <p>梅赛德斯轻轻地叹了一口气，想象着未来人类的样子。</p>
     <p>这样……是那个吧？像低等级的动画角色一样，头和身体一样大，手怎么想都比不上头，有这种感觉吗？</p>
     <p>但是动画片的那个很可爱，如果现实起来只会让人恶心罢了。</p>
     <p>至少不是真的想看的东西。</p>
-    <p>“不久，众神最终连留下自己的子孙的力量都失去了，甚至连这些都依赖机械了。</p>
-    <p>通过采集自己的基因，以此为基础培养克隆……只能用这种方法来保留子孙。</p>
-    <p>……不，已经连子孙都说不出来了吗？”</p>
+    <p>“<span class="character">不久，众神最终连留下自己的子孙的力量都失去了，甚至连这些都依赖机械了。</span></p>
+    <p><span class="character">通过采集自己的基因，以此为基础培养克隆……只能用这种方法来保留子孙。</span></p>
+    <p><span class="character">……不，已经连子孙都说不出来了吗？</span>”</p>
     <p>“<span class="character">原来如此。确实是生物难以形容的存在</span>”</p>
-    <p>“不久，当到达荣华高峰时，众神中的思想开始蔓延。</p>
-    <p>怀古主义……神作为生物在头脑和身体能力最平衡的时代追忆，应该回到那个时候的样子”</p>
+    <p>“<span class="character">不久，当到达荣华高峰时，众神中的思想开始蔓延。</span></p>
+    <p><span class="character">怀古主义……神作为生物在头脑和身体能力最平衡的时代追忆，应该回到那个时候的样子</span>”</p>
     <p>“<span class="character">……美丑的感觉是怎样的呢？就像人类看到原人也不觉得美丽一样，在变化过多的神看来，在日的人类完全是别的生物</span>”</p>
     <p>“<span class="character">只有这个是停留在过去的状态。就像刚才说的那样，因为众神通过移动克隆来观察外面，所以平时看到的都是日常生活中的“人类”。神的身姿，即使自己看也只能认为是怪物</span>”</p>
     <p>梅赛德斯认为那是地狱。</p>
     <p>带着作为人的感觉变成妖怪等，常人会发狂。</p>
-    <p>“于是，众神开始尝试创造自己子孙的新人类。</p>
-    <p>但是普通地用克隆再现和增加只是踏自己的二辙的可能性更高，同样的进化没有意义。</p>
-    <p>所以神从一开始……这才是原子自己加工、永不退化的、寿命长、健康美丽……我打算造出那样的人类。</p>
-    <p>然后做出来的，就是纳米机器”</p>
+    <p>“<span class="character">于是，众神开始尝试创造自己子孙的新人类。</span></p>
+    <p><span class="character">但是普通地用克隆再现和增加只是踏自己的二辙的可能性更高，同样的进化没有意义。</span></p>
+    <p><span class="character">所以神从一开始……这才是原子自己加工、永不退化的、寿命长、健康美丽……打算造出那样的人类。</span></p>
+    <p><span class="character">然后做出来的，就是纳米机器</span>”</p>
     <p>“<span class="character">……然后用纳米机器制造出来的，就是这个世界的生物吗？</span>”</p>
-    <p>《是》</p>
+    <p>《<span class="character">是</span>》</p>
     <p>梅赛德斯惊呆地望着浮在空中的蓝色月亮。</p>
     <p>我想相当，哎呀，人变成了可笑的事。</p>
     <p>难道这就是过火的科学的末路吗？</p>
     <p>总之，我充分理解了这个世界并不是当初想象的异世界。</p>
-    <p>“那么为什么我们会在这里？连真实都不知道地生活着，生活着？</p>
-    <p>这只是制造了别的生物而已。作为当初考虑的人类继承者没有发挥作用”</p>
+    <p>“<span class="character">那么为什么我们会在这里？连真实都不知道地生活着，生活着？</span></p>
+    <p><span class="character">这只是制造了别的生物而已。作为当初考虑的人类继承者没有发挥作用</span>”</p>
     <p>“<span class="character">那是……对不起。现在还不能说的内容</span>”</p>
-    <p>“两个迷宫就意味着这里是界限吗？我们是不是隐瞒了真实？</p>
+    <p>“<span class="character">两个迷宫就意味着这里是界限吗？我们是不是隐瞒了真实？</span></p>
     <p>“<span class="character">那个还不能说</span>”</p>
     <p>“<span class="character">……嗯。那么改变提问的方向吧</span>”</p>
     <p>梅赛德斯这样说着，看到了茨维尔夫的眼睛。</p>
@@ -66,7 +66,7 @@
     <p>“<span class="character">但是你并没有感到惊讶。也就是说……记忆力是能够预测到的事态吧？</span>”</p>
     <p>“<span class="character">好的。是被预测的事态，数虽然少但是几个人现在也应该存在。然后从今以后也会出生的吧</span>”</p>
     <p>转生者……不是不规则的。</p>
-    <p>至少从诸神和zwölf看的话是能预测的范围内的事，并且据说现在也有数人。</p>
+    <p>至少从诸神和茨瓦尔夫看的话是能预测的范围内的事，并且据说现在也有数人。</p>
     <p>自己作为人类的继任者被制造了的事实也好，怎么也不讨厌的预感。</p>
     <p>因为还没有给出答案，所以不能说什么，但是脑海中只浮现出讨厌的想象。</p>
     <p>“<span class="character">像我这样的有记忆的存在，和众神创造我们没有关系吧？</span>”</p>
@@ -74,20 +74,20 @@
     <p>“<span class="character">那个关系性能说明吗？</span>”</p>
     <p>“<span class="character">现在做不了</span>”</p>
     <p>“<span class="character">我们的思考是不是被锁定了一部分呢？</span>”</p>
-    <p>“好的。达到特定的思考的时候变得感到恐怖。</p>
-    <p>但是BOSS得到了两个迷宫，解除了那个锁”</p>
+    <p>“<span class="character">好的。达到特定的思考的时候变得感到恐怖。</span></p>
+    <p><span class="character">但是BOSS得到了两个迷宫，解除了那个锁</span>”</p>
     <p>“<span class="character">为什么会有那样的东西？</span>”</p>
     <p>“<span class="character">无法回答</span>”</p>
-    <p>“……我，其实实体与那个神，被那个神动了的偶人吗？</p>
-    <p>或者是神故意消除记忆，移植大脑的存在？”</p>
+    <p>“<span class="character">……我，其实实体与那个神，被那个神动了的偶人吗？</span></p>
+    <p><span class="character">或者是神故意消除记忆，移植大脑的存在？</span>”</p>
     <p>“<span class="character">不，不对。主人的身体是主人自己的。原本神的脑子就太巨大了，无法移植</span>”</p>
     <p>最可怕的是，现在在这里的自己其实不是自己。</p>
     <p>据说神为了让游戏中的角色移动，将克隆作为外置的终端来运作。</p>
     <p>那么，哪里都没有自己不是这样的保证。</p>
-    <p>但是，zwölf断言和那个不一样。</p>
+    <p>但是，茨瓦尔夫断言和那个不一样。</p>
     <p>“<span class="character">我还不能多说。为了说那个……请将所有的迷宫都收入手中。那时候我才能向你坦白这个世界的真实</span>”</p>
     <p>“<span class="character">也就是说，和至今为止做的事情是不会变的。</span>”</p>
-    <p>《是》</p>
+    <p>《<span class="character">是</span>》</p>
     <p>越是深入越让人有打开不可打开的潘多拉盒子的感觉。</p>
     <p>人类的末路、纳米机器、被制造的生物的我们……然后我们创造出来的理由。</p>
     <p>最初只是想着在这个世界不留遗憾地死掉就行了，但是故事开始向可笑的方向扩展。</p>
@@ -96,10 +96,10 @@
     <p>就这样，征服迷宫，解开世界的真相吧。</p>
     <p>在等待着不是很棒的东西吧，不要紧吧。反正不能后退。</p>
     <p>只是，只有冲刺。</p>
-    <p>“好吧。我称霸迷宫。</p>
-    <p>到最后来吧，zwölf”</p>
+    <p>“<span class="character">好吧。我称霸迷宫。</span></p>
+    <p><span class="character">到最后来吧，茨瓦尔夫</span>”</p>
     <p>“<span class="character">YES，我的主人</span>”</p>
-    <p>听到对zwölf的回答，梅赛德斯将danjon变成了钥匙后收起来。</p>
+    <p>听到对茨瓦尔夫的回答，梅赛德斯将迷宫变成了钥匙后收起来。</p>
     <p>这个迷宫有两个。</p>
     <p>如果要确保这个以上的迷宫的话，要到别的国家去吗……或者，只有打倒实践迷宫的持有者的二选择。</p>
     <p>也就是说，终于到了该来的时候了。</p>
