--- a/OEBPS/Text/c102.xhtml
+++ b/OEBPS/Text/c102.xhtml
@@ -12,7 +12,7 @@
 
 <body>
     <h1>102. 新的迷宫</h1>
-    <p>马克斯.战斗的待遇以惊人的速度被决定了。</p>
+    <p>马克斯·战斗的待遇以惊人的速度被决定了。</p>
     <p>首先，最初只是形式的审判，理所当然地成为了有罪判决。</p>
     <p>关于这点，因为看到那场战斗的全体都是目击者，所以无可奈何。</p>
     <p>因公主的慈悲而至死罪为止被给予了7天的缓期是唯一的救赎吗？</p>
@@ -22,10 +22,11 @@
     <p>从结论上来说，被斩首的马克斯是影武者。</p>
     <p>当然，想成为国家叛逆者的马克斯的影武者这样的醉汉不存在,不过，如果不在制作就行了。</p>
     <p>能通过那个乱来的东西就是迷宫。</p>
-    <p>“将国民认可的沉重的罪行和裁决给予麦克斯，也希望吉克林德能够接受”接受了汉娜的胡作非为，梅赛德斯考虑马上和贝阿朵列克斯时一样进行复制。</p>
-    <p>这个时候，认为只是为了被处刑而生的复制不需要思考力的梅赛德斯对zuverfu做了胡闹动作，要求了脑比原创小就行。</p>
+    <p>“<span class="character">将国民认可的沉重的罪行和裁决给予麦克斯，也希望吉克林德能够接受</span>”</p>
+    <p>接受了汉娜的胡作非为，梅赛德斯考虑马上和贝阿朵列克斯时一样进行复制。</p>
+    <p>这个时候，认为只是为了被处刑而生的复制不需要思考力的梅赛德斯对茨瓦尔夫做了胡闹动作，要求了脑比原创小就行。</p>
     <p>虽然觉得这可能是不可能的，但是如果不故意制造原本应该做的零件就好了，所以很灵活。</p>
-    <p>zwölf说“至今为止几乎没有人提出过这样的要求”。那是当然的。</p>
+    <p>茨瓦尔夫说“<span class="character">至今为止几乎没有人提出过这样的要求</span>”。那是当然的。</p>
     <p>但是，通过这个判明，如果故意使性能恶化的话，也可以有意地制造出新种类的魔物。因为也能成为点节约今后制作削减了.的猪人啦也说不定。</p>
     <p>……啊，那个已经有了吗？</p>
     <p>然后把没有做好意思的马克斯肉偶人作为替身，成功地让马克斯生存下来。</p>
@@ -65,14 +66,14 @@
     <p>那天，不知为何教室比平时喧闹了一些。</p>
     <p>一部分学生不安定的样子说话，看上去好象浮躁不安。</p>
     <p>到底是怎么回事,不过，那个理由成为进入了教室的古斯塔夫被说出的事。</p>
-    <p>“今天上课前有话要说。</p>
-    <p>也许已经有几个人知道，但不知不觉前几天，在我国附近出现了新的迷宫”</p>
+    <p>“<span class="character">今天上课前有话要说。</span></p>
+    <p><span class="character">也许已经有几个人知道，但不知不觉前几天，在我国附近出现了新的迷宫</span>”</p>
     <p>学生们吵闹的原因是什么，新的迷宫出现了。</p>
     <p>恐怕有力的贵族的孩子是通过父母听那个信息的吧。</p>
     <p>虽然梅赛德斯是第一次听到这个消息，但是即使放任不管，那个父亲也不会特意来告诉他的。</p>
     <p>因为看隔壁的话汉娜什么吃惊也没显出，她知道吧。</p>
-    <p>“但是位置上卢米埃尔就在附近，而且没有接触任何一个国境。</p>
-    <p>因此，在处理上不是哪个国家的东西，完全是自由的迷宫”</p>
+    <p>“<span class="character">但是位置上卢米埃尔就在附近，而且没有接触任何一个国境。</span></p>
+    <p><span class="character">因此，在处理上不是哪个国家的东西，完全是自由的迷宫</span>”</p>
     <p>一边听古斯塔夫的说明，梅赛德斯从记忆中拉出了鲁米埃尔这个名字。</p>
     <p>确实是上课时听到的，离精灵最近的国家。</p>
     <p>当然说很近也有距离。只是在精灵的国家中离得最近而已。</p>
@@ -80,8 +81,8 @@
     <p>如果走出国境内，那将被当作斯塔克迷宫一样被当作该国的迷宫来对待。</p>
     <p>但是，这次的情况是无法归哪个国家的所有。</p>
     <p>哪个国家的法鲁什进入也好，谁攻略也好。也就是说早者胜。</p>
-    <p>“于是立刻两国共同在附近建立村落，开始攻略迷宫。</p>
-    <p>海卡行会支部也计划近期建成”</p>
+    <p>“<span class="character">于是立刻两国共同在附近建立村落，开始攻略迷宫。</span></p>
+    <p><span class="character">seeker行会支部也计划近期建成</span>”</p>
     <p>虽然觉得这样没关系吗，但是现在吸血鬼和精灵的关系并不是那么坏。</p>
     <p>西米勒等从过去的战争的经验到现在敌视吸血鬼的人也多，据说实际背面推进着战争的准备,不过，精灵不听那样的传言。</p>
     <p>就在最近，一个叫罗勒的人刚刚在这边引起骚动，那个可能是个人的暴走，所以不能说什么吧。</p>
@@ -93,13 +94,13 @@
     <p>当然，因为已经有公主吉克林德，所以不能即位，而且还有未婚妻菲利克斯。</p>
     <p>但是如果是攻略者和继承者的话，攻略者优先的可能性很高，可能会踢掉菲利克斯，成为那个吉林德公主的丈夫。</p>
     <p>因此男性们的干劲满溢。有没有不希望迷宫和哈密瓜都能入手的男人呢？不，我该走了。</p>
-    <p>“但是理所当然的，没有学习Elfe语的人从选拔中去除。</p>
-    <p>如果不能对话的话那就不像话了”</p>
+    <p>“<span class="character">但是理所当然的，没有学习Elfe语的人从选拔中去除。</span></p>
+    <p><span class="character">如果不能对话的话那就不像话了</span>”</p>
     <p>听了这话，一半以上的男子露出了人世末日般的表情，意气消沉。</p>
     <p>看来他们没有学会精灵语。</p>
     <p>不是必修科目，没办法。</p>
-    <p>“给所有人分发纸张。希望者请在这纸上写下希望的内容，上课结束后提交上来。</p>
-    <p>那么，今天开始上课吧”</p>
+    <p>“<span class="character">给所有人分发纸张。希望者请在这纸上写下希望的内容，上课结束后提交上来。</span></p>
+    <p><span class="character">那么，今天开始上课吧</span>”</p>
     <p>古斯塔夫这样说，从前面的座位开始按顺序交希望的纸张。</p>
     <p>那么，怎么了？</p>
 </body>
