--- a/OEBPS/Text/c105.xhtml
+++ b/OEBPS/Text/c105.xhtml
@@ -71,7 +71,7 @@
     <p>梅赛德斯打算拿出羊皮纸和笔开始计算，但比那先苏维尔夫回答说。</p>
     <p>《490.3325米，主人》</p>
     <p>“<span class="character">……是吗，有你在啊</span>”</p>
-    <p>因为爽快地tsuverfu发出了距离，与羊皮纸做完了笔。</p>
+    <p>因为爽快地茨瓦尔夫发出了距离，与羊皮纸做完了笔。</p>
     <p>暂且用这个距离明白了。</p>
     <p>因为返回了出发地点时没有冲击用什么力量被缓和吧,不过，尽管如此被从比东京塔高的地方自由落下……这样的话，不经意间掉下去的话，会受到相当的精神上的伤害吧。</p>
     <p>好吧，重要的是这里。</p>
@@ -79,10 +79,10 @@
     <p>“<span class="character">这没关系……怎么办呢？</span>”</p>
     <p>“<span class="character">9秒……不，请在8秒钟的时候停止</span>”</p>
     <p>梅赛德斯再次从起点跳下，任由他自由落下。</p>
-    <p>姑且自己也计数,不过，正确的测量的zuverfu的存在谢谢。</p>
-    <p>《停止！》</p>
+    <p>姑且自己也计数,不过，正确的测量的茨瓦尔夫的存在谢谢。</p>
+    <p>《<span class="character">停止！</span>》</p>
     <p>进入了杜威尔夫的制止，与此同时，梅赛德斯使用重力魔法浮游。</p>
-    <p>然后边看周围，边问ツヴェルフ。</p>
+    <p>然后边看周围，边问茨瓦尔夫。</p>
     <p>“<span class="character">现在的距离是？</span>”</p>
     <p>“<span class="character">351米地点，主人</span>”</p>
     <p>果然，从听到停止后到浮游为止，似乎还是有一些障碍。</p>
@@ -91,10 +91,10 @@
     <p>第一次落下到490m的话被强制性地返回到出发地的事明白了。</p>
     <p>因此，以490m面前为中心进行探索。</p>
     <p>“<span class="character">主人，你为什么要调查这里？</span>”</p>
-    <p>“和以兴趣为中心的不协调感啊。如果只是掉下来回到起点，就不需要在下面准备这么大的空间。</p>
-    <p>掉下10米左右就回来，这样也不错吧。</p>
-    <p>但是特意准备了490m的空间……我被那个吸引了。</p>
-    <p>而且谁都没有调查过的地方会引起兴趣”</p>
+    <p>“<span class="character">和以兴趣为中心的不协调感啊。如果只是掉下来回到起点，就不需要在下面准备这么大的空间。</span></p>
+    <p><span class="character">掉下10米左右就回来，这样也不错吧</span>。</p>
+    <p><span class="character">但是特意准备了490m的空间……我被那个吸引了。</span></p>
+    <p><span class="character">而且谁都没有调查过的地方会引起兴趣</span>”</p>
     <p>梅赛德斯认为，上面姑且不论，下面调查的人应该不多吧。</p>
     <p>首先，这个迷宫的大前提是向上发展的构造，浮游的道路也能向上前进。</p>
     <p>如果那样掉下来的话，因为是去出发地点所以没有向下目标的好处。</p>
@@ -112,6 +112,7 @@
     <p>如果被拿走的话，和梅赛德斯一样，下面是奇怪的，调查的人也有。</p>
     <p>这样的话，虽然不知道是吸血鬼还是精灵，但是这次的竞争对手中会有直觉很好的家伙</p>
     <p>如果变成敌对的话也许很麻烦……一边这样想着，梅赛德斯决定停止下面的调查，向上看。</p>
+    <p class="divline"></p>
     <p>Q、真的是一望无际的天空吗？</p>
     <p>A、其实有看不见的墙壁和天花板，靠近那里的话被返回到起点结构。</p>
     <p>而墙壁和天花板对面的广阔的天空就像是屏幕上映出的影像，并不是真的天空延续到任何地方。小气。</p>
