--- a/OEBPS/Text/c107.xhtml
+++ b/OEBPS/Text/c107.xhtml
@@ -21,18 +21,18 @@
     <p>这时，拿着最后的铠甲的精灵的女人慌忙装入了铠甲，与此同时门也打开了。</p>
     <p>梅赛德斯马上跳入门中，接着精灵的女性也进入了门。</p>
     <p>紧随其后，其他的seeker们蜂拥而至，但却被看不见的墙壁阻挡，无法前进。</p>
-    <p>果然，正如Zeverfu的读法一样，这个机制好像是只有那些不管数量都嵌入了武具的人才能通行的。</p>
+    <p>果然，正如茨瓦尔夫的读法一样，这个机制好像是只有那些不管数量都嵌入了武具的人才能通行的。</p>
     <p>本来是设想四人各通过的构造，但是那样拖着脚，永远都无法钻过那扇门。</p>
-    <p>“啊哈哈哈！好舒服啊，杂鱼们！</p>
-    <p>在那里一辈子互相妨碍就好了！活该！</p>
+    <p>“<span class="character">啊哈哈哈！好舒服啊，杂鱼们！</span></p>
+    <p><span class="character">在那里一辈子互相妨碍就好了！活该！</span></p>
     <p>以梅赛德斯的妖怪的形式突破门扉的精灵，在门对面至今仍在丑恶地争斗着，一边朝着其他寻事者们摆出得意的表情，一边用双手竖起马赛克中指。今天一天也要加油哦。</p>
     <p>虽然精灵给人一种高雅的印象，但其实并非如此。</p>
     <p>外表是美少女。茶色的头发在脖子后面扎起来，服装是短袖短裤的轻装。</p>
     <p>绿色衣服的材质有点特殊，布和皮革都不一样。</p>
     <p>不摸一下的话是不会知道的，但是从远处看感觉质感和叶子很相似。</p>
     <p>当她注意到梅赛德斯的视线时，她猛然站了起来。</p>
-    <p>“什、什么啊！干劲！？要来的话就做你的对手吧！</p>
-    <p>但是在这里落下的话再从一层重新做哟！所以我觉得还是不要战斗比较好！”</p>
+    <p>“<span class="character">什、什么啊！干劲！？要来的话就做你的对手吧！</span></p>
+    <p><span class="character">但是在这里落下的话再从一层重新做哟！所以我觉得还是不要战斗比较好！</span>”</p>
     <p>究竟是坚强还是软弱，艾露菲一边说着一些不明白的话，一边摆出向前伸出的架势。</p>
     <p>恐怕不是接近战斗，而是准备随时都可以射击魔法的架势吧。</p>
     <p>但是梅赛德斯在意的不是精灵自己，而是那个飞行方法。</p>
@@ -47,33 +47,33 @@
     <p>可是在那里，如果象软管一样地尖端准备细的道具通过那个道具一点威力高涨。</p>
     <p>当然，前提是要牢固到软管不易损坏，但多少也是有办法的。</p>
     <p>“<span class="character">不……我觉得是很好的道具</span>”</p>
-    <p>“嗯？是、是吗？那么好吗？</p>
+    <p>“<span class="character">嗯？是、是吗？那么好吗？</span></p>
     <p>“<span class="character">啊。动力是魔石还是本人的魔力不明白,不过，是用高压发射用魔法制作了的水的辅助器具吧，那个。我觉得是个好主意</span>”</p>
     <p>如果能给予魔法指向性增加威力的话，一般来说那是优秀的道具。</p>
     <p>假设水魔法的使用者没有道具想要飞的话，双手就会堵塞，必须尽可能的输出，魔力也会渐渐减少。</p>
     <p>在这一点上，她使用的那双手是自由的。</p>
     <p>而且如果改变炮门的方向就那样转为攻击的事也是可能的吧。</p>
     <p>一想到精灵就是制造那种道具的种族吗，警戒度就增加了一点。</p>
-    <p>“哼，你明明是吸血鬼，你不明白嘛。</p>
-    <p>哎呀，我的时代要来了吗？这个大天才Resly的时代要来了吗？”</p>
+    <p>“<span class="character">哼，你明明是吸血鬼，你不明白嘛。</span></p>
+    <p>哎呀，我的时代要来了吗？这个大天才莱斯利的时代要来了吗？”</p>
     <p>“<span class="character">莱斯利？</span>”</p>
     <p>“<span class="character">莱斯利！虽然不太明白，但是讨厌那个声音！</span>”</p>
     <p>梅赛德斯一瞬间想起了贝尔克罗的超人莱斯利的身影，但很快就从她的思考中消失了。</p>
     <p>看来她的名字叫莱斯利。</p>
     <p>“<span class="character">那是自己做的吗？</span>”</p>
-    <p>“是啊。把一个一个什么也没有的东西组合起来加工，成为一个优秀的工具。那才是神的御业，作为神的道具的『kiki』！</p>
-    <p>模仿那个就是接近神的道路哟。</p>
-    <p>也就是说我是世界上最接近神的精灵！”</p>
+    <p>“<span class="character">是啊。把一个一个什么也没有的东西组合起来加工，成为一个优秀的工具。那才是神的御业，作为神的道具的『kiki』！</span></p>
+    <p><span class="character">模仿那个就是接近神的道路哟。</span></p>
+    <p><span class="character">也就是说我是世界上最接近神的精灵！</span>”</p>
     <p>梅赛德斯坦率地佩服莱斯利这个精灵，虽然脸上看起来很粗鲁，但实际上很了不起。</p>
     <p>这个世界上还没有机械这个概念。</p>
     <p>即使有相似的东西，要说是哪个的话应该称为karakuri的水平。</p>
     <p>这个世界停留在地球的中世纪水平，但关于机械却不止于此。</p>
     <p>比如说中世纪，地球上只有机械式手表，但是这个世界上没有那样的东西。</p>
     <p>以前，书上没有画画，但是和这个同样，这个世界有着只在特定的领域故意堵塞道路的不协调感。</p>
-    <p>那么，这位名叫Resly的少女，也许正如她本人说的那样，真的接近人类了。</p>
+    <p>那么，这位名叫莱斯利的少女，也许正如她本人说的那样，真的接近人类了。</p>
     <p>“<span class="character">嗯……话说回来，这个转用到攻击上也挺方便的</span>”</p>
-    <p>“啊，明白了吗？正如你所说，用这么多输出的水来攻击的话，比普通的射击水魔法要强得多。</p>
-    <p>这样稍微改变一下出水的方向的话……”</p>
+    <p>“<span class="character">啊，明白了吗？正如你所说，用这么多输出的水来攻击的话，比普通的射击水魔法要强得多。</span></p>
+    <p><span class="character">这样稍微改变一下出水的方向的话……</span>”</p>
     <p>受到梅赛德斯的称赞，看上去很精神的莱斯利把炮门迎向了前方。</p>
     <p>然后朝后面吹跑了。</p>
     <p>理所当然。因为向下持续发射水的事飞着，如果朝向前那个吹跑是必然的。</p>
@@ -89,9 +89,9 @@
     <p>“<span class="character">皮？</span>”</p>
     <p>他仔细端详着主张，要摸摸这个，好像是着急了的皮可擅自摸了。</p>
     <p>于是台座轰鸣，广播响起。</p>
-    <p>“在转播点记录了你的数据。从下面开始能从这个地点重新开始。</p>
-    <p>另外，掉下来的时候也能从这里重新开始。</p>
-    <p>就这样继续吗？还是回到地上去呢？”</p>
+    <p>“<span class="character">在转播点记录了你的数据。从下面开始能从这个地点重新开始。</span></p>
+    <p><span class="character">另外，掉下来的时候也能从这里重新开始。</span></p>
+    <p><span class="character">就这样继续吗？还是回到地上去呢？</span>”</p>
     <p>“<span class="character">……彼得？</span>”</p>
     <p>听到的广播，piko歪着头，看着梅赛德斯。</p>
     <p>这好像是游戏中保存的地方。</p>
