--- a/OEBPS/Text/c109.xhtml
+++ b/OEBPS/Text/c109.xhtml
@@ -51,8 +51,8 @@
     <p>接着梅赛德斯又拿起枪一样的东西。</p>
     <p>这个世界上使用的枪支是口袋枪，而且性能更高的枪支，现在还从未见过。</p>
     <p>因为那个口袋枪，也有魔法这个力量，到那里强有力的武器这个评价没得到。</p>
-    <p>“那是装入魔石发射魔法的魔法枪。</p>
-    <p>即使是不擅长魔法的人也能够用魔法来攻击这个世纪的大发明！”</p>
+    <p>“<span class="character">那是装入魔石发射魔法的魔法枪。</span></p>
+    <p><span class="character">即使是不擅长魔法的人也能够用魔法来攻击这个世纪的大发明！</span>”</p>
     <p>“<span class="character">射击的次数是？</span>”</p>
     <p>“<span class="character">根据魔石的质量，三发左右！</span>”</p>
     <p>梅赛德斯无言地放下了魔法枪。</p>
@@ -65,16 +65,16 @@
     <p>从结论上来说，毫无疑问是个天才，但都偏离了靶子。</p>
     <p>那样的遗憾的少女是对莱斯利的梅赛德斯的评价。</p>
     <p>“<span class="character">原来如此，每个都很有趣啊。</span>”</p>
-    <p>“是吧！你有看头！</p>
-    <p>因为话虽这么说，但是其他同伴却一点都不了解我的厉害！”</p>
-    <p>“但是，单独想到这些是不可能的吧。</p>
-    <p>我觉得有什么参考来源……你参考了什么？</p>
+    <p>“<span class="character">是吧！你有看头！</span></p>
+    <p><span class="character">因为话虽这么说，但是其他同伴却一点都不了解我的厉害！</span>”</p>
+    <p>“<span class="character">但是，单独想到这些是不可能的吧。</span></p>
+    <p><span class="character">我觉得有什么参考来源……你参考了什么？</span></p>
     <p>不管莱斯利是天才，也不会一个人想到这么多东西。</p>
     <p>更何况在这个几乎没有科学基础的世界，这是更为罕见的事情。</p>
     <p>所以梅赛德斯，认为绝对有什么知识的来源。</p>
     <p>或者，莱斯利也有可能是和自己一样的转生者。</p>
-    <p>“那么，参考……什么事啊？</p>
-    <p>大天才蕾丝酱全部都是自己想出来的，是原创的”</p>
+    <p>“<span class="character">那么，参考……什么事啊？</span></p>
+    <p><span class="character">大天才莱斯利酱全部都是自己想出来的，是原创的</span>”</p>
     <p>莱斯利虽然这么说，但并没有把视线与梅赛德斯对准。</p>
     <p>这些并不是全部自己考虑的，好象有什么信息的出处。</p>
     <p>接着梅赛德斯又目不转睛地看着，不一会儿就折断了似的张开了嘴。</p>
@@ -95,10 +95,10 @@
     <p>所以没说多余的话，就让大家看了。</p>
     <p>“<span class="character">……！</span>”</p>
     <p>适当地翻阅卷了的页，梅赛德斯的脸色变化。</p>
-    <p>看到那个，Resley笑了。</p>
-    <p>“完全不知道你在干什么吧？</p>
-    <p>我也是边翻译边读的，其实只读了三成左右。</p>
-    <p>虽然跟FOGERA边境的小国使用的语言很像，但这个很难理解”</p>
+    <p>看到那个，莱斯利笑了。</p>
+    <p>“<span class="character">完全不知道你在干什么吧？</span></p>
+    <p><span class="character">我也是边翻译边读的，其实只读了三成左右。</span></p>
+    <p><span class="character">虽然跟FOGERA边境的小国使用的语言很像，但这个很难理解</span>”</p>
     <p>莱斯利说话很奇怪，但梅赛德斯却不止如此。</p>
     <p>我明白了她为什么这么简单地给我看书。</p>
     <p>因为踩到无论如何看也不会明白，所以就这么简单地给我们看。</p>
@@ -111,7 +111,7 @@
     <p>恐怕给其他人看，也不知道这里写了什么。</p>
     <p>“<span class="character">……这是哪里？</span>”</p>
     <p>“<span class="character">在义卖会上卖的。刚开始只是觉得很在意才买的，但是翻译之后才知道是很厉害的书。现在是我的宝物哦</span>”</p>
-    <p>向李斯利确认，至少不是迷宫等得到的。</p>
+    <p>向莱斯利确认，至少不是迷宫等得到的。</p>
     <p>即使不知道它的价值，但如果是从迷宫带回来的宝物，就不会流向义卖了。</p>
     <p>也就是说，从与迷宫无关的地方出来的可能性很高。</p>
     <p>这样一来，我非常想和这本书的作者见一面。</p>
